部分文本由于百度吞楼导致的缺失问题处理;部分译名统一

--- a/OEBPS/Text/c001.xhtml
+++ b/OEBPS/Text/c001.xhtml
@@ -47,7 +47,7 @@
     <p>何时开始的呢？认识着不是自己的自己某人的人生的。</p>
     <p>何时开始的呢？发现今生是第二次。</p>
     <p>少女的记忆中，从某一天发现的时候，就住着完全不记得的某人的人生。</p>
-    <p>名字是梅赛德斯。家名是格鲁内瓦尔特。</p>
+    <p>名字是梅赛德斯。家名是格鲁内瓦特。</p>
     <p>她作为治理广大土地的吸血鬼伯恩哈特卿众多的侧室中的一个孩子出生了。</p>
     <p>认识到前世的记忆是什么时候……确实，感觉在自我萌芽的时候已经在一起了。总而言之，这倒是从头开始。</p>
     <p>但是对于梅赛德斯来说，与其说是前世，还不如说是完全不知道的某人的知识。</p>
@@ -95,8 +95,8 @@
     <p>梅赛德斯认为。现状也算是生活好了。</p>
     <p>好象受到着只有最低限度的生活费，一边承蒙作为唯一的仆人的老婆婆的帮助以母亲和女儿细小地一边生活。</p>
     <p>但这不会永远持续下去。母亲和自己能这样生活，是因为自己有勉强继承家名的权利……不过，没有优先级等于没有的继承权。</p>
-    <p>格鲁内瓦尔特的名字将由本妻之子继承吧。那倒不错，问题在那之后。</p>
-    <p>如果正式决定了格鲁内瓦尔特的继承人，以自己为首不知有多少人的侧室的孩子全都不需要。</p>
+    <p>格鲁内瓦特的名字将由本妻之子继承吧。那倒不错，问题在那之后。</p>
+    <p>如果正式决定了格鲁内瓦特的继承人，以自己为首不知有多少人的侧室的孩子全都不需要。</p>
     <p>看到这种粗鲁的对待，还会有决定继承人之后也会给予照顾的想法，也太过乐观了。</p>
     <p>……母亲都被抛弃了。那种程度的事还是预先预测一下比较好。</p>
     <p>梅赛德斯更加思考。</p>
@@ -119,7 +119,7 @@
     <p>代价是自己的生命之一。支付仅一张小费，购买危险后获得当日伙食补助的户外服务。</p>
     <p>这个工作的名字叫探索者Saker，是世界上攻略无数秘境和迷宫获得金钱，是世界上死亡率最高的工作。</p>
     <p>五岁儿童梅赛德斯挣钱的方法只有那个。</p>
-    <p>但是，就算是吸血鬼，只要凭着与生俱来的力量，从事这份工作的话，很快就会变成尸体吧。第一，在纸箱里通常有吸血鬼，也有很多人死后没有回来。</p>
+    <p>但是，就算是吸血鬼，只要凭着与生俱来的力量，从事这份工作的话，很快就会变成尸体吧。第一，在saker里通常有吸血鬼，也有很多人死后没有回来。</p>
     <p>所以梅赛德斯想。简单明快而又幼稚的结论不需要多长时间。</p>
     <p>——变强就好。</p>
     <p>谁都会想到，过于简单的答案。被说如果那个能不辛苦也没有办法。</p>
