--- a/OEBPS/Text/c003.xhtml
+++ b/OEBPS/Text/c003.xhtml
@@ -11,7 +11,7 @@
 
 <body>
     <h1>3. 至少让孩子自由</h1>
-    <p>琉迪亚·格鲁内瓦尔特是生活在泰尔海纳大陆首屈一指的布鲁特的平民姑娘。</p>
+    <p>琉迪亚·格鲁内瓦特是生活在泰尔海纳大陆首屈一指的布鲁特的平民姑娘。</p>
     <p>这个世界——红色行星是太阳的光辉和蓝色星球伊甸园所守护的红色星球。</p>
     <p>神话中说，以前神们从伊甸园乘神之船降落到这里，将没有生物居住的这个星球用奇迹的灵术改造成了生物能居住的星球。</p>
     <p>更甚者，众神将从伊甸园带来的几种生物解放到这颗星球，历经长年累月才增加其数量。</p>
@@ -83,7 +83,7 @@
     <p>然后，最后总结了结论的话想要买那些的钱。</p>
     <p><span class="character">“……一开始是挣小钱吧」</span></p>
     <p>梅赛德斯苦笑着，咬住了起点特有的原样。</p>
-    <p>想做个纸箱冒险，想要装备什么的，为了得到那个首先必须要工作。</p>
+    <p>想做个saker冒险，想要装备什么的，为了得到那个首先必须要工作。</p>
     <p>这样的话，就只能从不需要装备等简单的操作开始处理了吧。</p>
     <p>没办法，只好先穿上身上的衣服再出发。</p>
     <p>梅赛德斯下定决心离开了宅邸。</p>
