--- a/OEBPS/Text/c004.xhtml
+++ b/OEBPS/Text/c004.xhtml
@@ -44,8 +44,8 @@
     <p>确认一遍，看记载栏。</p>
     <p>如果对这个条件没有不满的话，好像要写上名字和年龄。</p>
     <p>虽然也有住址栏，但是没有固定住址的人并不稀奇，所以这里不写也可以。</p>
-    <p>梅赛德斯首先写了自己的名字，但却犹豫着写格鲁内瓦尔特的名字。</p>
-    <p>格鲁内瓦尔特是统治包括东京都在内的土地的领主。即使是侧室的孩子，也肯定是个问题。</p>
+    <p>梅赛德斯首先写了自己的名字，但却犹豫着写格鲁内瓦特的名字。</p>
+    <p>格鲁内瓦特是统治包括东京都在内的土地的领主。即使是侧室的孩子，也肯定是个问题。</p>
     <p>所以梅赛德斯决定在这里写下母亲的旧姓。</p>
     <p><span class="character">“写出来了”</span></p>
     <p><span class="character">“好的，谢谢。……嗯，梅赛德斯·卡尔瓦特。无地址，年龄20。虽然觉得不是外表那样的年龄，但是成长很慢啊。好羡慕啊”</span></p>
@@ -100,7 +100,7 @@
     <p>因为比起低是相当好的事，这个结果应该坦率地高兴吧。</p>
     <p>积累的五年并不是白费。</p>
     <p><span class="character">「那张卡已经是你的了。请让我说私人的事的话以那个能力价值F等级卡哭，请接受癌症工作提高癌症等级。F等级不适合你”</span></p>
-    <p><span class="character">“不，先让我从简单的工作开始做吧。必须学习做纸箱的工作”</span></p>
+    <p><span class="character">“不，先让我从简单的工作开始做吧。必须学习做saker的工作”</span></p>
     <p><span class="character">“慎重啊”</span></p>
     <p><span class="character">“我很胆小。那么，有什么样的工作？”</span></p>
     <p>不管能力如何，梅赛德斯终究是个没有实战经验的初学者。</p>
@@ -115,7 +115,7 @@
     <p>梅赛德斯在几份委托书中寻找看起来不错的东西。</p>
     <p>【巴拉沃尔夫·布朗捕获委托】</p>
     <p>委托人：半月堂宠物店</p>
-    <p>报酬额：2万青蛙</p>
+    <p>报酬额：2万Elka</p>
     <p>期限：无限</p>
     <p>细节：瓦拉沃夫种子中个子小，力气小，又老实，所以作为宠物很受欢迎的浏览器种卖完了，请捕获。</p>
     <p>如果捕获雄性和雌性的话，会支付加倍的报酬。</p>
