--- a/OEBPS/Text/c005.xhtml
+++ b/OEBPS/Text/c005.xhtml
@@ -20,7 +20,7 @@
     <p>两头蛇尾的是奥特罗斯种。</p>
     <p>据说除了暗绿色的事以外普通的狗能看见ku·shi种。</p>
     <p>每一部都是在神话中听过一次的名字，但恐怖的怪物们如果都是这个大小的婴儿的话就太可爱了。</p>
-    <p>在纸箱中，似乎有很多人将这些宠物当作探索的伙伴。</p>
+    <p>在saker中，似乎有很多人将这些宠物当作探索的伙伴。</p>
     <p>梅赛德斯也一边想着如果金钱充裕的话可以考虑一下一边离开了店铺。</p>
     <p>今后前往的shutakudanjon在离开了36km的位置。</p>
     <p>因为徒步的时速与吸血鬼和人也没什么差的时速7km。</p>
