--- a/OEBPS/Text/c006.xhtml
+++ b/OEBPS/Text/c006.xhtml
@@ -56,8 +56,8 @@
     <p>“不管怎么说，我使用了魔法。”</p>
     <p>“这么说来还真是风属性呢。但是，用『自由』飞行这么快也能移动吗。</p>
     <p>……好吧，总之完成委托了。那么，这就是报酬”</p>
-    <p>这样说着，接待处递过来的是四张一万青蛙的纸币。</p>
-    <p>一万青蛙是这个国家最高的纸币，画着过去的伟人。</p>
+    <p>这样说着，接待处递过来的是四张一万Elka的纸币。</p>
+    <p>一万Elka是这个国家最高的纸币，画着过去的伟人。</p>
     <p>梅赛德斯想起，他是脸颊瘦削的吸血鬼男子，据书上记载，这个男子可能是历史上第一个建立吸血鬼之国的国王。</p>
     <p>“地图做得很好，我先打包了一下。下次就拜托你了”</p>
     <p class="divline"></p>
@@ -70,7 +70,7 @@
     <p>首先是蜡烛灯。玻璃里放着蜡烛，一根蜡烛持续亮着两个小时。</p>
     <p>蜡烛另售十套，可以换蜡烛使用，非常方便。</p>
     <p>梅赛德斯暂且把一个灯笼，蜡烛组套装入三个购物篮，向下面的地方出发了。</p>
-    <p>接下来是鞋子。纸箱在那个工作上，不管怎样是荒地还是什么走来走去都是必要的，如果是脆弱的鞋马上就坏掉了。实际上，梅赛德斯的鞋子只是昨天一天过度使用就已经到了极限。</p>
+    <p>接下来是鞋子。saker在那个工作上，不管怎样是荒地还是什么走来走去都是必要的，如果是脆弱的鞋马上就坏掉了。实际上，梅赛德斯的鞋子只是昨天一天过度使用就已经到了极限。</p>
     <p>所以买的鞋子要选择耐久性优秀的龙皮鞋。</p>
     <p>看商品旁边的说明书，用从小龙这个种子取了的皮，好象炫耀高(贵)的耐久性和防水性。</p>
     <p>据说更加在脚尖部分由于同样埋入小龙的骨的事也保护着脚尖。像安全鞋一样的东西吗？</p>
