--- a/OEBPS/Text/c007.xhtml
+++ b/OEBPS/Text/c007.xhtml
@@ -156,20 +156,19 @@
     <p>“ぬう……”</p>
     <p>终于以武器的数量排列，成为了二刀流们的战斗。</p>
     <p>剑战再次被恢复，但是这次明确地被梅赛德斯压倒了。</p>
-    <p>OGA也想方设法用没有武器的手臂进行攻击,不过，配合那个被打进拳头被打碎，用剑的花样被打折，简直太刀不能打。</p>
-    <p>刀刃再次在空中飞舞，终究只剩下一把有机武器了。</p>
+    <p>奥加也想方设法用没有武器的手臂进行攻击,不过，配合那个被打进拳头被打碎，用剑的花样被打折，简直太刀不能打。</p>
+    <p>刀刃再次在空中飞舞，终究只剩下一把奥加武器了。</p>
     <p>“一本”</p>
     <p>“ぐ……呜呜哦哦哦！”</p>
     <p>高加吼叫，以到现在为止以上的速度挥舞刀刃。</p>
     <p>但是，梅赛德斯在这场短暂的战斗中放弃了行动，没有用刀刃防御，一副很凉爽的表情避开了一切。</p>
     <p>然后反击。挥起剑，击落最后的一把。</p>
-    <p>就这样不放头发，将刀刃对准OGA的头部，封住动作。</p>
+    <p>就这样不放头发，将刀刃对准奥加的头部，封住动作。</p>
     <p>“有胜负……是吧？”</p>
     <p>“……啊！我输了”</p>
     <p>把六把剑全部丢下，把刀刺向了脖子。</p>
     <p>这样的话还不能说没有输。</p>
-    <p>OGA象放弃了一样地承认败北，在那个场合刺了膝。</p>
-
+    <p>奥加象放弃了一样地承认败北，在那个场合刺了膝。</p>
     <p class="divline"></p>
     <p>其实我最喜欢的是TOBAL2。</p>
     <p>在敌人面前放着腐烂的肉让他们吃，吃了炸药自取灭亡，在连接下层的洞前睡着的话突然敌人出现，就那样啪嗒投篮……那个很开心。</p>
