--- a/OEBPS/Text/c009.xhtml
+++ b/OEBPS/Text/c009.xhtml
@@ -11,9 +11,9 @@
 
 <body>
     <h1>9. 交易</h1>
-    <p>在救出三重奏的第二天，梅赛德斯被送往三重奏商会总部的接待室。</p>
-    <p>为了控制她的身后而站着本凯，毫不疏忽地警戒着周围的人。</p>
-    <p>前面的座位上坐着三轮车，脸色比昨天好多了。</p>
+    <p>在救出トライヌ的第二天，梅赛德斯被送往トライヌ商会总部的接待室。</p>
+    <p>本凯站在她身后，毫不疏忽地警戒着周围的人。</p>
+    <p>前面的座位上坐着トライヌ，脸色比昨天好多了。</p>
     <p>被叫到这里的理由是想改正昨天救过的礼，但主题恐怕不是那边吧。</p>
     <p>“再次致谢，梅赛德斯小姐。多亏了你，我才能这样再次在月下走路了。</p>
     <p>我一定要向您致谢。有什么想要的东西吗？”</p>
@@ -24,13 +24,13 @@
     <p>暂且成功制作巧克力的现在，接下来是梅赛德斯想制造的罐头。</p>
     <p>把食品放入密封性高的容器杀菌关闭。虽然用语言来说很简单，但是人类到达这里需要很长的时间。</p>
     <p>很遗憾，这个世界还没有到达那里。</p>
-    <p>虽然不想大规模地破坏市场，但耐久的食物会帮助包括自己在内的很多纸箱。</p>
+    <p>虽然不想大规模地破坏市场，但耐久的食物会帮助包括自己在内的很多saker。</p>
     <p>“那是……能允许我卖吗？”</p>
     <p>“能拿到销售额的一成左右。而且提案者绝对不要将我的名字外露。</p>
     <p>我想在那个条件下卖制造方法。</p>
     <p>当然，之后你要问我，上次食物的制作方法也是同样的条件”</p>
-    <p>对于三驾马车来说，与梅赛德斯的接触是幸运的吧。对面一看，不但救了性命，而且那恩人是一棵金树。</p>
-    <p>但是幸运的不仅仅是三条狗。对于梅赛德斯来说，和他接触也是件幸运的事。</p>
+    <p>对于トライヌ来说，与梅赛德斯的接触是幸运的吧。对面一看，不但救了性命，而且那恩人是一棵金树。</p>
+    <p>但是幸运的不仅仅是トライヌ。对于梅赛德斯来说，和他接触也是件幸运的事。</p>
     <p>巧克力的量产对于梅赛德斯一个人来说很难。但是作为大商人的他如果附着在背部可以。</p>
     <p>再加上，如果在这里也能获得批量生产的巧克力的销售额，那就无话可说了。</p>
     <p>“如果说不愿意就没关系。到时我会坦率地收下现金的”</p>
@@ -83,16 +83,16 @@
     <p>那么，这次接受的是来自魔物的素材采集的委托。</p>
     <p>【华尔街果冻采集请求】</p>
     <p>委托人：甜品店丽拉</p>
-    <p>报酬额：2万青蛙～</p>
+    <p>报酬额：2万Elka～</p>
     <p>期限：2周以内</p>
     <p>详细：请捕捉迷宫中出现的华尔街果冻，或者采集身体的一部分。</p>
     <p>用带回的果冻的量也提高报酬。</p>
     <p>【盖利佩·菲特的夺剑请求】</p>
     <p>委托人：工业行会</p>
-    <p>报酬额：1万青蛙～</p>
+    <p>报酬额：1万Elka～</p>
     <p>期限：3周以内</p>
     <p>详细：希望能夺走迷宫中出现的格利佩·菲特的剑。</p>
-    <p>一只一万只青蛙让我买下。</p>
+    <p>一只一万只Elka让我买下。</p>
     <p>暂且梅赛德斯接受的是这两个。</p>
     <p>要说骸骨剑士gelipe·feter，还是梅赛德斯强夺了剑的那个吗？与委托书下写的特征一致。</p>
     <p>现在拿的东西是自己用的，可以带几个一样的东西回去。</p>
@@ -110,15 +110,15 @@
     <p>今后将挑战各种各样的迷宫，但梅赛德思索着首先要用这个修塔克迷宫。</p>
     <p>魔物也想再捕获一体或二体左右作为伙伴，在这里赚取强有力的武器也预先得到。</p>
     <p>梅赛德斯目前的目的是从父亲那里独立出来，养育母亲和婆婆。</p>
-    <p>为此，脚手架也必须稳固。</p>
-    <p>求婚者是赌上性命的工作，但就算如此，也不想每次都赌博。</p>
-    <p>好好地形成脚手架，如果能稳定地没有风险地赚那个最好。</p>
+    <p>为此，立足点也必须稳固。</p>
+    <p>saker是赌上性命的工作，但就算如此，也不想每次都赌博。</p>
+    <p>好好地形成立足点，如果能稳定地没有风险地赚那个最好。</p>
     <p>“本凯。你觉得在这个迷宫里的魔物中如果成为伙伴的话哪个比较好？”</p>
     <p>“嗯，是啊。那样的话，十二层以后出现的修瓦鲁兹·沃尔夫范等怎么样？”</p>
     <p>“什么魔物？”</p>
-    <p>“全高1m半的狼型魔物，是这个洞窟中出现的沃尔夫范格中身体最大、力量最强的魔物。</p>
+    <p>“全高1m半的狼型魔物，是这个迷宫中出现的沃尔夫范格中身体最大、力量最强的魔物。</p>
     <p>没有特别的异能,不过，如果只那个份单纯的力量和速度被认为是volfang种最上位的zuilban·volfang也排列。</p>
-    <p>虽然性格有点难为情，但对认同主人的人要有赌上性命服从的忠诚心，如果能很好地驯服主人的话，会有很大的帮助。作为交通工具也很有用”</p>
+    <p>虽然性格有点难相处，对被认定为主人的人要有赌上性命服从的忠诚心，如果能很好地驯服他们的话，会有很大的帮助。”</p>
     <p>“看起来还不错。找到了就抓住它吧”</p>
     <p>梅赛德斯想，这大概就是一头很大的狼吧。</p>
     <p>大狼真不错。充满了幻想的感觉，如果习惯了这种感觉的话，作为宠物也会变得可爱。</p>
@@ -129,4 +129,7 @@
     <p>梅赛德斯把以前用来代替火把的树枝伸向猫的面前，好像引起了猫的兴趣。</p>
     <p>于是，猫的视线就盯住了那里，扔了它就追了上去，不知跑到哪里去了。</p>
     <p>猫没有事。</p>
+    <p class="divline"></p>
+    今度はわんこをゲットしに再びダンジョンへ。
+    こいつクリアする気あるのか……？
 </body>
