--- a/OEBPS/Text/c011.xhtml
+++ b/OEBPS/Text/c011.xhtml
@@ -12,14 +12,14 @@
 <body>
     <h1>11. 兄弟们</h1>
     <p>梅赛德斯手边现在有大量的巧克力和罐头。</p>
-    <p>两者都是从三角商会赠送的。</p>
+    <p>两者都是从トライヌ商会赠送的。</p>
     <p>关于这个，就像是对提案者的感谢之情，因为没有特别收费，所以实际上是免费得到想要的东西。</p>
     <p>不管怎样，探索迷宫就变得特别容易了。</p>
     <p>因为新加入了小黑的成员，战力也齐备了以就要深的地方作为目标也好吧。</p>
     <p>总之，让我们以保卫三人终于到达的最下层为目标吧。当然，如果觉得有一点困难就马上撤退了。</p>
     <p>就这样制订了计划，告辞出发······话说回来，梅赛德斯在家门前遇到了陌生男女。</p>
     <p>人数是四人。有两个男人，两个女人。</p>
-    <p>年龄大概都在十代前半到后半吧。最引人注目的高个子男的个子越大，看起来像个大学生。</p>
+    <p>年龄大概都在十岁左右吧。最引人注目的高个子男的个子越大，看起来像个大学生。</p>
     <p>其次大的男人是中学生左右。两个女人都在十岁或更早之前吧。</p>
     <p>不过，吸血鬼从表面上很难看出年龄，所以实际上不知道她们几岁。</p>
     <p>“真是梅赛德斯·格鲁内瓦特啊”</p>
@@ -34,7 +34,7 @@
     <p>从被给予的住宅的简陋程度来看，恐怕侧室中母亲的立场也相当低吧。</p>
     <p>但是虽说如此，其他的侧室也受到了优待······似乎也不是。</p>
     <p>像这样特意召集相同遭遇的人，向自己等人打招呼的时候，他们的立场也相当危险</p>
-    <p>“我们自报家门吧。我是波利斯·格鲁内瓦尔特。年龄是十四岁，其中年龄最大的”</p>
+    <p>“我们自报家门吧。我是波利斯·格鲁内瓦特。年龄是十四岁，其中年龄最大的”</p>
     <p>首先自报家门的他好像是最年长的。</p>
     <p>确实看的目的也正好是那个附近。看来还没到不老期。</p>
     <p>并且最年长的事，还是他领导人格看起来好。</p>
@@ -56,11 +56,11 @@
     <p>“虽然没有自报姓名的必要，但却是梅赛德斯·格鲁内瓦特。年龄是十岁。</p>
     <p>那么你们有什么事到这里来了？难道不只是让处于同样境遇的人们友好相处吗？”</p>
     <p>梅赛德斯尽可能努力不让声音中包含荆棘，但用冷淡的声音听着她感觉到一定的距离。</p>
-    <p>“从现在开始一个月后，在格鲁内瓦特本邸举办了作为正妻之子的菲利克斯·格鲁内瓦尔特的第十五次生日庆典”</p>
+    <p>“从现在开始一个月后，在格鲁内瓦特本邸举办了作为正妻之子的菲利克斯·格鲁内瓦特的第十五次生日庆典”</p>
     <p>“这样啊，但是和我没有关系”</p>
     <p>“不，虽然至今为止都是这样，但这次是有关系的。菲利克斯觉得难得的生日庆典其他兄弟都不能参加太可怜了……于是叫来了其他兄弟，好不容易才开始说想举行互相比较强度的活动”</p>
     <p>“原来如此，我们能起到衬托作用吗？”</p>
-    <p>“理解得真快啊。没错，那家伙在公共场合打我们，会给我们留下深刻的印象，那就是Gurunevart的正视继承人。同时，由于显示力量的差距，我们今后，为了不做多余的梦，钉钉子的意义也有吧。继承者是自己。你们万一都没有萌芽……肮脏的家伙。你不这么想吗？”</p>
+    <p>“理解得真快啊。没错，那家伙在公共场合打我们，会给我们留下深刻的印象，那就是格鲁内瓦特的正视继承人。同时，由于显示力量的差距，我们今后，为了不做多余的梦，钉钉子的意义也有吧。继承者是自己。你们万一都没有萌芽……肮脏的家伙。你不这么想吗？”</p>
     <p>到处都有御家骚动。当有复数的人成为继任者时，谁成为继任者会产生争执是很难避免的潮流。</p>
     <p>如果这样顺利的话，作为正妻的孩子的长子的菲利克斯是继任者。</p>
     <p>但是，这并非绝对的，或许有着没有其他侧室的孩子的野心。说不定打算踢落自己。他一定是这么想的。</p>
