--- a/OEBPS/Text/c012.xhtml
+++ b/OEBPS/Text/c012.xhtml
@@ -30,28 +30,28 @@
     <p>梅赛德斯家里的主要菜单是现在她吃过的粗茶淡饭。有时也放野草沙拉。</p>
     <p>这并不是说照顾老人的老婆婆和母亲不擅长做饭，只能买那种东西。</p>
     <p>不过，关于这个，自从梅赛德斯在某种程度上能够自由活动之后，由于能吃到野草、蘑菇、河里捕到的鱼、打捞的野兽等带来了改善。</p>
-    <p>并且现在资金也富余更加改善前进，如果从triu商会支付销售额的一部分一口气富豪转变吧。</p>
+    <p>并且现在资金也富余更加改善前进，如果从トライヌ商会支付销售额的一部分一口气富豪转变吧。</p>
     <p>梅赛德斯的地基巩固历经五年的岁月，进展极为顺利。</p>
     <p>如果没有知识，自己说不定也是这样。如此想来，即使前世并不怎么喜欢，也必须感谢吧。</p>
     <p>这样说着，玛吉特的肚子咕噜咕噜地响了。</p>
     <p>果然，好像没怎么吃。</p>
-    <p>“这样也吃吧。生气”</p>
+    <p>“这样的话吃这个吧。垫下肚子”</p>
     <p>梅赛德斯从口袋里拿出巧克力，撕破包装交给玛吉特。</p>
     <p>虽然是自己吃的便携式食品，不过一张左右也没关系吧。</p>
     <p>收到巧克力的玛吉特瞪大了眼睛，大吃一惊。</p>
     <p>“哇……这是巧克力吗？可以吃吗？这样吗？</p>
     <p>“什么，你知道吗？”</p>
     <p>“嗯。莫尼卡大人说，这是最近只有在都内流行的有钱人才能买到的高级点心，稍微分了一点给我！”</p>
-    <p>……那个虎皮小鬼，到底卖多少钱？</p>
+    <p>……那个トライヌ小鬼，到底卖多少钱？</p>
     <p>梅赛德斯忍不住叹了一口气。</p>
     <p>前世是100日元象被卖一样的板巧克力以下的质量，有钱人以外不能买的高级品……。</p>
     <p>梅赛德斯想做的是能简单地便宜地买到的高卡路里的便携式食品和应急食品，以高价卖那个怎样做？</p>
     <p>但是权利已经卖出去了。</p>
-    <p>因此，无论卖多少，那都是三人狗的自由。</p>
+    <p>因此，无论卖多少，那都是トライヌ的自由。</p>
     <p>然后只有一个信息。莫尼卡就是那个纵横的女孩吗……虽然蔑视的态度很显眼，但也不是那么坏的孩子。</p>
     <p>“但是，真的可以吗？这个很贵吧？”</p>
     <p>“没关系。有原因库存堆积如山”</p>
-    <p>而且因为是提案者，所以对TRINE来说，无论多少都能廉价出售。</p>
+    <p>而且因为是提案者，所以对トライヌ来说，无论多少都能廉价出售。</p>
     <p>毕竟是卖品，所以第一次送礼物以后就不是免费了，但即使这样也会降价吧……大概。</p>
     <p>嗯，按这个价格打折也算是奇怪的价格了。</p>
     <p>玛吉特带着孩子般的笑容咬着巧克力，沉迷于其中吃了一阵。</p>
@@ -74,4 +74,60 @@
     <p>说着什么伤心的事,不过，使之不碰那里。</p>
     <p>而且，因为梅赛德斯没有交到同年龄的朋友，一味地进行修行和修行，所以不能说别人的事情。</p>
     <p>厌恶跟别人的必要以上的关联的梅赛德斯是严重的孤独体质。</p>
+    <p>「在这边画点什么看下」</p>
+    <p>「呜，嗯」</p>
+    <p>梅赛德斯从口袋里取出羊皮纸和笔，交给马吉特。</p>
+    <p>无所谓，虽说是羊皮纸，但实际上材料不是羊皮和山羊皮。</p>
+    <p>在地牢里沸腾，打倒了也完全没有问题，甚至被称赞的生物……也就是说魔物是羊皮纸的主要材料。</p>
+    <p>因为活着是有害的，所以要打倒。倒下后骨头变成装饰品和装备。肉是食物。而且如果皮变成羊皮纸的话，就用羊皮纸。</p>
+    <p>魔物对这个世界的人们来说是害兽，同时也是某种意义上必须存在的存在。</p>
+    <p>「好了」</p>
+    <p>收到了马尔吉特画完的纸，梅赛德斯大为惊叹。</p>
+    <p>那里描绘的是梅赛德斯。</p>
+    <p>而且在一眼就能看出自己被描绘出来的程度上抓住了特征，非常擅长。</p>
+    <p>梅赛德斯一边看画一边思考。以前在行会上看到委托书的时候，想要易懂的画或者照片。</p>
+    <p>而且行会想要地牢的信息，甚至要把地牢的映射作为委托。</p>
+    <p>还有一个。梅赛德斯在读家里的魔物书……与其这么说，不如说是看了各种各样的书才注意到的事情，但不知为何这个世界上的书完全没有画。</p>
+    <p>「……首先是情报收集。去一次行会吧」</p>
+    <p>◆</p>
+    <p>「在书上画画儿？这么说来没怎么见过呢……为什么呢？</p>
+    <p>嗯，硬要说的话，书是读文字的东西。也许是因为觉得画是描绘风景和人物的东西吧。</p>
+    <p>奇怪地分开住了呢。那大概是理由吧。</p>
+    <p>读书就是读书吧？也就是说给人一种能读懂文字的高贵之人阅读的印象。你不觉得画什么的不需要多余的东西吗？</p>
+    <p>嘛，我并不是真的在写书，只是推测而已」</p>
+    <p>为什么没有放着画的书呢。</p>
+    <p>听了那个的结果，从接待处回来的回答是这个。</p>
+    <p>没什么事。只是单纯的固定观念。</p>
+    <p>画是艺术。文字是学。没有因为种类不同而混为一谈的想法本身。</p>
+    <p>即使那样，有插画也没关系。</p>
+    <p>在地球上插图的历史和书籍的历史几乎同时开始。</p>
+    <p>「那么没有什么特别不能做的吧？」</p>
+    <p>「没听说过呢。但是我觉得挺好的，有画的书。</p>
+    <p>那么奇怪的画被贴在身上的那一天只会给人添麻烦，如果搭配得好的话，连不识字的吸血鬼也能看书吧」</p>
+    <p>也没有特别不能做的深层理由。</p>
+    <p>如果这是法律或者宗教上的理由的话，就必须放弃。</p>
+    <p>但是，如果只是一种固定观念的话，就没问题了。踌躇的东西却没有破坏。</p>
+    <p>当然，到现在为止读既存书的人们会反对的聋哑画家会抱怨‘画明明是我们的领域’吧。</p>
+    <p>但是，无论何时都要开拓新类型。在不愿意改变的旧体制派的反对下继续前进。</p>
+    <p>（……即使这样，也知道没有绘本。那是从十八世纪开始出现的。</p>
+    <p>这个世界上还没有不可思议的东西。</p>
+    <p>但是没有插画究竟是……）</p>
+    <p>没有在书上和文字一起放画的文化。</p>
+    <p>这本身就是方便。多亏了这一点，我也找到了可以挣到马吉特的方法，我也想要带有插画的魔物图鉴。</p>
+    <p>但是总觉得难以理解。要说这个吸血鬼之国的文化特色的话那就没什么了，但一般来说还是会在书上附上吧……一幅画左右。</p>
+    <p>画是人类从旧石器时代获得的沟通手段。也许，我早就记住画画了。</p>
+    <p>就算有多少文字，不使用也太不自然了。</p>
+    <p>为了传达无法用语言很好地传达的抽象的事情，画是最有效果的。如果要写魔物的图鉴等的话，更需要一些吧。</p>
+    <p>感到小骨卡在喉咙里的不协调感。</p>
+    <p>但是历史之类的东西，试着去解读的话，也有像笨蛋一样的事情没有发展的时候。</p>
+    <p>那样的话也许有。也有这样的事。</p>
+    <p>强迫自己接受、梅赛德斯停止了进一步的思考。</p>
+    <p>メルセデス「…………」←自分でも絵を描いてみた</p>
+    <p>受付「这是什么」</p>
+    <p>メルセデス「……一応猫……のつもりだ」</p>
+    <p>受付「新種のモンスターにしか見えないわよ」</p>
+    <p>ベンケイ「その……なかなか独創的ですな……」</p>
+    <p>通りすがりの猫「ニャーン」</p>
+    <p>訳：ワイらこんなブッサイクちゃうわ。舐めとんのか。</p>
+    <p>メルセデス「…………」</p>
 </body>
