--- a/OEBPS/Text/c013.xhtml
+++ b/OEBPS/Text/c013.xhtml
@@ -117,6 +117,6 @@
     <p>咦？难道这些家伙很强？</p>
     <p>至今为止，在梅赛德斯眼中，本凯和小黑始终是“弱小的迷宫中强大的部类”的魔物。</p>
     <p>但是，事实上却判明了“普通的强大魔物”。</p>
-    <p>「啊，对了。这个魔物的情报，全部合计225万青蛙让我买下”</p>
+    <p>「啊，对了。这个魔物的情报，全部合计225万Elka让我买下”</p>
     <p>对付出的金额超过预期的价格，梅赛德斯现在才明白，这不是开玩笑之类的，真的是那个迷宫，很强的迷宫。</p>
 </body>
