--- a/OEBPS/Text/c014.xhtml
+++ b/OEBPS/Text/c014.xhtml
@@ -37,7 +37,7 @@
     <p>当然画什么的完全没有,不过，能说因为易懂地画着图等某种意义插图。</p>
     <p>梅赛德斯也在家里用同样的书记住了文字。真想和这位作者见一面。</p>
     <p>“这样就能读写文字了。那样的话就能从事代书人的工作。</p>
-    <p>代书人除了做纸箱、等级雇佣兵、士兵等赌上性命的工作以外，都是能稳定赚钱的工作之一”</p>
+    <p>代书人除了做saker、等级雇佣兵、士兵等赌上性命的工作以外，都是能稳定赚钱的工作之一”</p>
     <p>梅赛德斯推荐玛吉特赚钱的工作被称作代书人。</p>
     <p>这是代写各种文件、情书、请愿书等的工作，识字率并不是很高，在这个世界上可以挣很多钱。</p>
     <p>在现代社会，不像日本那样谁都能读写文字，而写文字的工作是非常有必要的。</p>
@@ -55,7 +55,7 @@
     <p>虽然看起来很冷淡，但这也是梅赛德斯式的关怀。</p>
     <p class="divline"></p>
     <p>从三角洲商会那里收到了一部分通过巧克力和罐头获得的销售额。</p>
-    <p>……总额超过了数亿青蛙。那个男人到底卖了多少钱？</p>
+    <p>……总额超过了数亿Elka。那个男人到底卖了多少钱？</p>
     <p>因为根据契约梅赛德斯成为销售额的一成，最低也得到数十亿特伊努商会。</p>
     <p>只听那个的话可能会觉得少。比如说，在日本，情人节巧克力的年销售额高达五百亿。</p>
     <p>但正是因为日本人口众多。</p>
@@ -71,9 +71,9 @@
     <p>现在由于稀奇的初回销售提高挂上(放上)着，暂且销售额也安定尝试狗很好地也做了。</p>
     <p>将目标完全集中在贵族身上，全体让贵族争购吧。</p>
     <p>（恐怕也有为了显示自己的资产而抢购的贵族。）</p>
-    <p>一块板状巧克力以一万只青蛙的猎获价格出售，如果单纯卖出一万枚的话，就达到一亿只青蛙的销售额。</p>
+    <p>一块板状巧克力以一万只Elka的猎获价格出售，如果单纯卖出一万枚的话，就达到一亿只Elka的销售额。</p>
     <p>在这个城市里，贵族只有百人左右，除了梅赛德斯的父亲——伯恩哈特卿以外，都是没有领土的法衣贵族。</p>
-    <p>那倒是。拥有并管理这块土地的是格鲁内瓦尔特家，除此之外拥有领土的贵族不可能在这块土地上。</p>
+    <p>那倒是。拥有并管理这块土地的是格鲁内瓦特家，除此之外拥有领土的贵族不可能在这块土地上。</p>
     <p>但即便如此，贵族还是贵族。因为比一般人更有钱，所以只有那样的人才想炫耀自己的财力。</p>
     <p>大概是这些人抢购、大量购买的结果。</p>
     <p>总而言之只是野鸭。</p>
@@ -128,7 +128,7 @@
     <p>如果这个世界使用方便HP用快攻象恢复一样的药和药草等没有。</p>
     <p>暂且有一种名为药品的药品，只是一种伤药。当然没有即效性。</p>
     <p>但是在这个世界上，魔石是封闭魔法的便利之物。</p>
-    <p>也就是说，当然也有关闭了恢复魔法的魔石，这样的东西在纸箱里很受欢迎。</p>
+    <p>也就是说，当然也有关闭了恢复魔法的魔石，这样的东西在saker里很受欢迎。</p>
     <p>梅赛德斯先购买二十个，再买齐各种各样的魔石。</p>
     <p>强力的冻结魔法的魔石、炎之魔石、水之魔石等，主要以自己不能使用的东西为主。</p>
     <p>因为行李增加了，再买一个大型背包，这边让时钟拿。</p>
