--- a/OEBPS/Text/c015.xhtml
+++ b/OEBPS/Text/c015.xhtml
@@ -23,7 +23,7 @@
     <p>如果可能的话，在像迷宫一样的封闭空间里也能不感到压力地进行活动就好了”</p>
     <p>梅赛德斯看着关在笼子里的魔物，向店主询问。</p>
     <p>于是店主心领神会，马上给我们出示了一个笼子。</p>
-    <p>“这样的话，我推荐‘攀岩’。</p>
+    <p>“这样的话，我推荐‘克拉伊利亚’。</p>
     <p>这是迷宫内最适合搬运货物的魔物”</p>
     <p>果然，这种时候的回答最快的应该是专业人士吧。</p>
     <p>到现在为止，肯定也有很多客人和梅赛德斯一样来这家店。</p>
@@ -34,12 +34,12 @@
     <p>嘴像鸟嘴一样尖，鼻尖有一根，头部有两根角。</p>
     <p>脖子上有保护要害的围巾，外表看起来就像是把前世图鉴中看到的Trikeratopusu缩小了一样。</p>
     <p>眼睛很平静，在笼子里咯吱咯吱地嚼着草。</p>
-    <p>“这家伙是高潮。</p>
-    <p>性情温和，容易养熟，说的事也经常听。</p>
+    <p>“这家伙是克拉伊利亚。</p>
+    <p>性情温和，容易养熟，说的事也会听。</p>
     <p>持久力出色，使之拿重的行李也不颤动。</p>
     <p>另外，平时虽然很老实，但认真奔跑时的速度却轻易地超过了马”</p>
     <p>“好啊。买这个吧，多少钱？”</p>
-    <p>“变成三十万青蛙”</p>
+    <p>“变成三十万Elka”</p>
     <p>作为随身行李的小型触发器……原来，立即购买了攀岩。这样行李就保管好了。</p>
     <p>在这里，梅赛德斯没有马上潜入迷宫，当天就回去一次，花了数天时间对克莱利亚进行教育。</p>
     <p>在训练的同时，通过多次进行让哈尔巴德熟识的训练，与本凯和小黑交织的模拟战来提高战斗力。</p>
@@ -58,12 +58,12 @@
     <p>梅赛德斯用哈尔巴德斩杀他的核心，向前迈进。</p>
     <p>向下、向下、一味向下。</p>
     <p>虽然不知道是什么样的结构，但越往里走，阶层的宽度就会发生变化，变得像迷宫一样。</p>
-    <p>原来如此，原来是三条狗把食物吃光了。经常在最短的道路上前进的梅赛德斯，一日也不能攻略。</p>
+    <p>原来如此，原来是トライヌ把食物吃光了。经常在最短的道路上前进的梅赛德斯，一日也不能攻略。</p>
     <p>本凯知道路，所以即使没有地图的地方也能很容易地发现通往下一个阶层的楼梯，真是值得庆幸的事。</p>
     <p>但即便如此，难易度还是越往里走，迷宫也越复杂。</p>
     <p>梅赛德斯通过事先预先预习、映射、本凯等伙伴，进展顺利，否则攻略将极为困难。</p>
     <p>初次见面就突然能攻略这个的家伙可以断言是怪物。</p>
-    <p>但是，梅赛德斯的步伐也是从纸箱的常识来看，是十分出类拔萃的速度。</p>
+    <p>但是，梅赛德斯的步伐也是从saker的常识来看，是十分出类拔萃的速度。</p>
     <p>潜入迷宫五日。仅仅如此而已，一行人就已经到达了最底层。</p>
     <p>「主。下一个二十五层是最下层。</p>
     <p>在那之前应该休息一下吗？”</p>
@@ -73,24 +73,24 @@
     <p>梅赛德斯把罐头打开，用叉子吃里面的魔鬼肉。</p>
     <p>然后吃了一块板状巧克力，决定那天睡觉。</p>
     <p>看守是交替制，一个人睡四个小时。</p>
-    <p>第二天——梅赛德斯他们在作为目的的门前，与被命名为本凯之前的阿修拉Oga对峙着。</p>
+    <p>第二天——梅赛德斯他们在作为目的的门前，与被命名为本凯之前的阿修拉奥加对峙着。</p>
     <p>“你来了，求宝者。但是今后只要有我在就不会前进”</p>
     <p>“原来如此，你真的在啊，本凯”</p>
     <p>“主”</p>
-    <p>“我知道。交给我了”</p>
-    <p>班凯走到阿修拉Oga前面。</p>
+    <p>“我知道。交给你了”</p>
+    <p>本凯走到阿修拉奥加前面。</p>
     <p>虽然是相同的存在，但是二者却有着一目了然的差异。</p>
-    <p>阿修拉Oga是梅赛德斯遇见时那样的外表，武器也只有六把剑。</p>
+    <p>阿修拉奥加是梅赛德斯遇见时那样的外表，武器也只有六把剑。</p>
     <p>相对的，本凯用铠甲包裹全身，武器除了剑以外也装备着各种各样的东西。</p>
     <p>与梅赛德斯的相遇改变了本凯之前的本凯。过去和现在。</p>
     <p>这种差距显而易见，战斗始终被本凯压倒。</p>
     <p>二人展开互相挥舞武器的剑戟，武器的性能也不同。</p>
-    <p>阿修拉Oga不断地被击落武器，如果打开距离受到枪和十字弓的远距离攻击。</p>
+    <p>阿修拉奥加不断地被击落武器，如果打开距离受到枪和十字弓的远距离攻击。</p>
     <p>不久，本凯一次也没有表现出危险的场面，将过去的自己的头砍飞了。</p>
     <p>“很漂亮。我看到了你的成长”</p>
     <p>“这也是因为和主人相遇的缘故。”</p>
     <p>武器有差别。但是比这更大的差距就是能力的差距。</p>
-    <p>是的，单纯的本凯比阿修拉Oga要强。</p>
+    <p>是的，单纯的本凯比阿修拉奥加要强。</p>
     <p>梅赛德斯确信。可以。我们很强。</p>
     <p>谦虚是美德，骄傲是恶德。</p>
     <p>但是没有自信的人为什么能取得胜利呢？</p>
