--- a/OEBPS/Text/c016.xhtml
+++ b/OEBPS/Text/c016.xhtml
@@ -14,7 +14,7 @@
     <p>应梅赛德斯的呼声，黑色的门被打开了。</p>
     <p>其中广阔、广阔——无论到哪里都是广阔的空间。</p>
     <p>虽然不知道到底是怎么在迷宫中形成这样的空间的，但梅赛德斯为了不把动摇表现出来，努力地走进了大门。</p>
-    <p>本凯和小黑也跟在后面，只有随身携带行李的登山口留在门外。</p>
+    <p>本凯和小黑也跟在后面，只有随身携带行李的克拉伊利亚留在门外。</p>
     <p>于是门慢慢地关上了，关上了梅赛德斯、本凯、小黑。</p>
     <p>这样不突破考验，就无法生存下去。</p>
     <p>“挑战真实的人啊，好想来了。”</p>
@@ -96,17 +96,13 @@
     <p>不放过蹒跚的间隙，用重力魔法飞行，这次直接攻击哈佛。</p>
     <p>瞬间直方图也用翅膀防御，不过，连同那个翼切断。</p>
     <p>在历史的身体上刻上了伤痕。</p>
-
-
     <p>「第五章：强烈的后悔 弗蒂希·灰度」</p>
     <p>「五章――激しい後悔ヘフティヒ・グリュック」</p>
     <p>下一个招数又是火焰。历史从脸上放出火焰，向梅赛德斯他们进行攻击。</p>
     <p>但是那并不是之前的黑色火焰，而是像喷出的岩浆一样的红莲之炎。</p>
     <p>就像不断溢出的感情一样，火焰填满了空间，就像是后悔过去而辗转反侧的火焰在肆虐。</p>
     <p>梅赛德斯将水和冰的魔石全部扔到这里进行防御，但是无法防御。</p>
-
     <p>但是这样就可以了。因为她的目的不是防御什么的。</p>
-
     <p>「卧倒！」</p>
     <p>在梅赛德斯指示的同时，本凯和小黑尽可能地拉开距离伏下。</p>
     <p>梅赛德斯也同样拉开距离，用魔石展开风之防壁。</p>
@@ -114,24 +110,18 @@
     <p>就是所谓的水蒸气爆炸。</p>
     <p>根据规模的不同，山体崩溃也会引起的这种爆炸的确起到了作用。</p>
     <p>看不见翅膀。</p>
-
     <p>小黑没有从那里逃走，梅赛德斯乘坐在上面。</p>
-
     <p>历史也发出迎击的火焰，不过，由于小黑机敏地避开那个的事梅赛德斯只能集中在攻击上。</p>
-
     <p>「哈！」</p>
     <p>哈尔巴德一閃。</p>
     <p>斩断历史的侧腹，比接受反击更快地小黑脱离。</p>
     <p>交替进攻的是本凯。</p>
     <p>他放着交叉弓一边牵制一边缩短距离，用多个武器同时攻击刺进了历史的翅膀。</p>
-
     <p>「畳み掛けるぞ！」</p>
     <p>梅赛德斯跳过指示从小黑跳跃。</p>
     <p>轻轻松松地挥舞着哈尔巴德，将斩击的风暴吹向了历史。</p>
     <p>本凯和小黑也配合着进行连续攻击，直方图用翅膀和手臂正确防御，反击。</p>
     <p>三比一尚且势均力敌。果然只有一半的考验是不够的。</p>
-
-
     <p>「第六章——过去不会改变 ウンフェアエンダーリヒ・アインスト」</p>
     <p>「六章――過去は変わらないウンフェアエンダーリヒ・アインスト」</p>
     <p>在收到那个宣言的瞬间，梅赛德斯的身体突然被火焰包围了。</p>
@@ -145,7 +135,6 @@
     <p>我想避开这个也来不及了。被抓住了胸口，行动被封印了。</p>
     <p>在那里历史树打算从刚才的脸放出火焰。</p>
     <p>如果直接攻击的话，即使是梅赛德斯也不会平安。</p>
-
     <p>「嘁！」</p>
     <p>但是被抓住的只有衣服是不幸中的万幸。</p>
     <p>梅赛德斯自己撕破衣服，强行从拘束中逃脱，回避了火焰。</p>
@@ -183,7 +172,6 @@
     <p>在历史树的脸上打了个洞，就像完成了任务一样粉碎散落。</p>
     <p>「……干得······漂亮。汝等才是、能获取真实之人……」</p>
     <p>而且历史也因为现在的一击而崩塌了。</p>
-
     <p>说了对梅赛德斯他们的赞赏（虽然没有口……）他变成光的粒子消失了。</p>
     <p>看到这一幕后，梅赛德斯脱力，差点倒下。</p>
     <p>但是本凯突然接住了这个身体。</p>
