--- a/OEBPS/Text/c017.xhtml
+++ b/OEBPS/Text/c017.xhtml
@@ -19,7 +19,7 @@
     <p>在那里出现的是奇妙的景象。</p>
     <p>可称为大厅的空间里生长着好几棵树，树的中心部分嵌入了圆形的水槽。</p>
     <p>然后，在那之中的是……是魔物。</p>
-    <p>鼹鼠的魔物是狼男、格利佩·菲特、果冻……在阿修拉Oga到施瓦尔茨·沃尔夫范。</p>
+    <p>鼹鼠的魔物是狼男、格利佩·菲特、果冻……在阿修拉奥加到施瓦尔茨·沃尔夫范。</p>
     <p>无意中看到鼹鼠的魔物，眼睛果然还是受了伤。</p>
     <p>脱离了那个的前方有台座，台座上面有gelipe·feter的剑和本凯最初使用的剑同样的东西。</p>
     <p>台座下面开了一个洞，眺望了一会儿，令人惊讶的是与台座上设置的武器完全一样的武器从洞里被吐了出来。</p>
@@ -149,8 +149,8 @@
     <p>“老板好像对自己评价很低。</p>
     <p>我想，身边没有比较的对象吧？”</p>
     <p>“嘛，除了我之外的吸血鬼战斗的样子在附近没见过呢。”</p>
-    <p>“主人所服从的阿修拉Oga和修瓦鲁兹·沃尔夫范格被设定为几个锻炼的吸血鬼才能战斗的强度。</p>
-    <p>如果说得通俗易懂的话，有几个等级A的赛车才能打倒……如果做得不好那也是说不定全灭的水平。</p>
+    <p>“主人所服从的阿修拉奥加和修瓦鲁兹·沃尔夫范格被设定为几个锻炼的吸血鬼才能战斗的强度。</p>
+    <p>如果说得通俗易懂的话，有几个等级A的saker才能打倒……如果做得不好那也是说不定全灭的水平。</p>
     <p>试炼的舒瓦兹·希特里耶甚至可以与军队作战吧”</p>
     <p>我觉得梅赛德斯夸张了茨瓦尔夫的话。</p>
     <p>的确，我确信自己一定很强，但是不管怎么说能和军队战斗也太过分了。</p>
