--- a/OEBPS/Text/c019.xhtml
+++ b/OEBPS/Text/c019.xhtml
@@ -17,17 +17,17 @@
     <p>但是，并不是说因此人们不能得到信息。</p>
     <p>街头每天晚上都有人同时大声朗读报纸，向人们传递信息。</p>
     <p>正因为识字率低才成立的职业。</p>
-    <p>“Triu发现了将时间封入容器的技术。</p>
+    <p>“トライヌ发现了将时间封入容器的技术。</p>
     <p>使用这种技术的话，不影响季节，春夏秋在容器中造访，农产品可以在有田地的状态下保存。</p>
     <p>已经宣告了保存食物要熏制和醋腌制的时代结束。</p>
     <p>好吃的东西可以保持美味。这将对今后的航海产生重大影响”</p>
     <p>在这样充满活力的夜路上走过一辆马车。</p>
-    <p>在里面的是梅赛德斯和他的母亲——琉迪亚·格鲁内瓦尔特。然后是随从的老婆婆三人。</p>
+    <p>在里面的是梅赛德斯和他的母亲——琉迪亚·格鲁内瓦特。然后是随从的老婆婆三人。</p>
     <p>本凯和小黑考虑到万一，现在每个地牢都进入了哈尔巴德。</p>
     <p>说点题外话，梅赛德斯想和哈尔巴德长久地交往，所以取名为“蓝izen”。</p>
     <p>永远只是叫哈尔巴德的话会觉得无聊。</p>
     <p>“话说回来，梅尔，你居然能借这种马车了。”</p>
-    <p>「啊。赛车的工作进行得很顺利”</p>
+    <p>「啊。saker的工作进行得很顺利”</p>
     <p>琉迪亚大声的询问，梅赛德斯也用平和的声音回答。</p>
     <p>梅赛德斯平时是拔身刀一样的尖锐，不会破坏冰冷的态度，因为他不相信对方。</p>
     <p>反过来说，如果相信对方的话，刀就会收进鞘里，冰也会融化。</p>
@@ -40,18 +40,18 @@
     <p>被随意妄为反被怨恨，被卷入权力斗争只是麻烦而已。</p>
     <p>比起那个，在一定程度上和对方交往，在适当的地方输给对方才是最轻松的。</p>
     <p>格林内瓦尔特的遗迹等，没有自原先继承的打算，很好地打算显出自己也不想。</p>
-    <p>如果输了的结果，被交付一点点的赡养费被放逐就万万岁。高兴地舍弃格鲁内瓦尔特的名字吧。没有最坏的补贴也可以。</p>
+    <p>如果输了的结果，被交付一点点的赡养费被放逐就万万岁。高兴地舍弃格鲁内瓦特的名字吧。没有最坏的补贴也可以。</p>
     <p>这并不是父亲非道。</p>
     <p>在中世纪中止的这个世界的贵族社会，用极少量的赡养金驱逐继承人以外的自己的孩子是极其理所当然的事。</p>
     <p>为了减少粮食补贴，把自己的孩子送出战争也是很普通的事情。和前世的价值观完全不同。</p>
-    <p>格鲁内瓦尔特的本邸果然是豪华的东西。</p>
+    <p>格鲁内瓦特的本邸果然是豪华的东西。</p>
     <p>房子的大小和华丽，对贵族来说有表示自己的力量的意义。</p>
     <p>所以贵族基本上会把房子弄大、华丽。用那样的事炫耀力量。</p>
     <p>在枝形吊灯的光辉照耀下的大厅里聚集了许多被邀请的贵族，一只手拿着玻璃杯闲聊。</p>
     <p>这种聚会也可以用于和平时几乎不常见的人交友的商谈场合。</p>
     <p>所以贵族们会积极地和自己认为的对象搭话。</p>
     <p>在那样的中梅赛德斯是预料那样大体上放置状态。</p>
-    <p>与此形成鲜明对比的是，人山人海的地方好像是被招待的三条狗。</p>
+    <p>与此形成鲜明对比的是，人山人海的地方好像是被招待的トライヌ。</p>
     <p>代替他的贵族来访，连休息的时间都没有。</p>
     <p>虽然他不是贵族，但是罐头的贩卖等现在已经一举成名。</p>
     <p>大厅的边缘聚集着以前见过的其他侧室的孩子，一看到梅赛德斯就慌忙移开了视线。</p>
@@ -71,7 +71,7 @@
     <p>既然招待了这么多菜，那么菜肴就被这样贫乏的相貌所占据，在某种意义上是理所当然的。</p>
     <p>但是最重要的问题是，吸血鬼只要吸血就能生存下去吧。</p>
     <p>如果混入血大致的东西好吃地觉得，饭菜文化全然不成长，保存饮食也不发展。</p>
-    <p>与其特意做成干肉吃，还不如在冬天从被捉住的纸箱的强大魔物中抽出血来喝，这样既快又健康。</p>
+    <p>与其特意做成干肉吃，还不如在冬天从被捉住的saker的强大魔物中抽出血来喝，这样既快又健康。</p>
     <p>所以只有像香肠那样的料理，这个国家的料理情况惊人的贫穷。</p>
     <p>连香肠都提议的不是吸血鬼。即使没有那样的东西，吸血鬼只要有血就能过冬。</p>
     <p>做完香肠的，是兽人的象征。可以说大部分的料理都是由吸血鬼以外的人做的，没有一个吸血鬼发源于国家的料理。</p>
@@ -93,7 +93,7 @@
     <p>这期间好像菲利克斯在演讲似的，他一边夸张的举止一边对在生日会上聚集的贵族们表示感谢。</p>
     <p>如果就这样结束就好了，但是很遗憾不能那样。</p>
     <p>菲利克斯的话不久，像以前玻利斯说的那样，变成把其他侧室的孩子卷进来的东西。</p>
-    <p>“正如大家已经知道的那样，这次，会场上还有和我一样与格鲁内瓦尔特的血脉相连的我们的兄弟们。</p>
+    <p>“正如大家已经知道的那样，这次，会场上还有和我一样与格鲁内瓦特的血脉相连的我们的兄弟们。</p>
     <p>于是，作为集会，我和他们决定互相竞争力量”</p>
     <p>不用说，参加者们知道这个活动的目的。</p>
     <p>打倒其他的兄弟的事，让周围的人认为自己才是适合继承人的事。并且让其他的兄弟死心的事。有那样的目的的事等，不是傻瓜简单地明白。</p>
