--- a/OEBPS/Text/c021.xhtml
+++ b/OEBPS/Text/c021.xhtml
@@ -30,14 +30,14 @@
     <p>而且和以前相比，身体非常健康，而且胖得圆滚滚的。</p>
     <p>好歹用挣的钱相当豪游着。</p>
     <p>最后，伯恩哈特和梅赛德斯一样抱着胳膊静观战斗。</p>
-    <p>也就是说，除了士兵和Triun，格瓦哈鲁特家连在一起的东西只剩下了。</p>
+    <p>也就是说，除了士兵和トライヌn，格瓦哈鲁特家连在一起的东西只剩下了。</p>
     <p>梅赛德斯留在这里的理由只是观战。更进一步说，假设贝赛德兽的强度与初期的本凯相同，通过菲利克斯的战斗准确测量出自己以外的吸血鬼的强度。</p>
     <p>到现在为止梅赛德斯没有比较的对象。</p>
     <p>因此，即使知道自己可能是强势的部类，也无法正确把握其差距有多大。</p>
     <p>因此，在这里看菲利克斯的战斗打算测量与别人和自己的差。</p>
     <p>总之，她把菲利克斯当作衡量强度的尺子使用。</p>
     <p>“老虎。我想问一句，在你眼里菲利克斯算是强人吗？</p>
-    <p>「诶？嗯，是的……我对战斗不是很了解，但是那身姿和以前我雇用的B级别的求婚者匹敌”</p>
+    <p>「诶？嗯，是的……我对战斗不是很了解，但是那身姿和以前我雇用的B级别的saker匹敌”</p>
     <p>梅赛德斯根据Trainu的话来计算自己与菲利克斯的差距。</p>
     <p>在这种情况下，士兵的数量也减少了，最终只剩下菲利克斯一个人了。</p>
     <p>即使到了这种状态，伯恩哈特也没有介入救援的行为。</p>
