--- a/OEBPS/Text/c022.xhtml
+++ b/OEBPS/Text/c022.xhtml
@@ -131,7 +131,7 @@
     <p>所以mercedes至今为止，一直把父亲的事当成和别人差不多的程度。没有生气也没有不满。</p>
     <p>更正如他所说，梅赛德斯现在所想的，是牵起这只手带来的好处和不可取之处。</p>
     <p>他得出了这样的结论：把这两个放在天平上，笨拙地在这里反抗着逃跑，与其这样行动变得困难，还不如重新开口，利用这个父亲更有利。</p>
-    <p>格鲁内瓦尔特的名字可以利用。</p>
+    <p>格鲁内瓦特的名字可以利用。</p>
     <p>有了这个，接受到现在不能接受的正规的教育和训练巩固基础的事可能。</p>
     <p>而且能够吸收到只有贵族才能得到的众多书籍和知识。</p>
     <p>我觉得让父亲疯狂人生的母亲很可怜。啊，真可怜啊。</p>
