--- a/OEBPS/Text/c023.xhtml
+++ b/OEBPS/Text/c023.xhtml
@@ -81,7 +81,7 @@
     <p>到现在为止梅赛德斯称自己生活的国家为『吸血鬼的国家』,不过，这个完全不是正确的表现。</p>
     <p>这个国家正式名称叫『oruxu』，是位于西方的吸血鬼的大国。</p>
     <p>而且这个城市是奥尔克斯最大的城市，其规模也超过了王都。</p>
-    <p>统治包括这个城市在内的广大土地的是格鲁内瓦尔特家。</p>
+    <p>统治包括这个城市在内的广大土地的是格鲁内瓦特家。</p>
     <p>但是并不是只有奥尔克斯是吸血鬼的国家，在这个泰尔海纳大陆其他也存在着几个吸血鬼的国家，没有被统一互相使之发挥着眼光的状态。</p>
     <p>这不是奇怪的事。</p>
     <p>在战国时代，日本这个狭窄的土地中甚至还有尾张和越后的几个“国家”。</p>
