--- a/OEBPS/Text/c025.xhtml
+++ b/OEBPS/Text/c025.xhtml
@@ -75,7 +75,7 @@
     <p>但是父亲的目光没有去菲利克斯，不仅如此，他还为母亲准备了几个侧室，准备了“预备”。</p>
     <p>看老板和哥特弗里特的年龄就知道了，但实际上，在放弃之前菲利克斯可能就不行了。</p>
     <p>懊悔，不甘心。</p>
-    <p>你的孩子是我。大儿子是我。继承格鲁内瓦尔特之名的就是这个菲利克斯。</p>
+    <p>你的孩子是我。大儿子是我。继承格鲁内瓦特之名的就是这个菲利克斯。</p>
     <p>如此坚强，强烈地在心中呼喊。我想让父亲那样想。</p>
     <p>所以他决定在迎来15岁的那天，召集其他兄弟在父亲面前进行攻击。</p>
     <p>我想告诉父亲，自己才是父亲的儿子中最优秀的。想被认可。</p>
