--- a/OEBPS/Text/c027.xhtml
+++ b/OEBPS/Text/c027.xhtml
@@ -71,11 +71,11 @@
     <p>“格鲁内瓦特？那真是个大贵族啊……”</p>
     <p>“不凑巧我和四子。没必要继承家业”</p>
     <p>伯恩哈特满怀着让梅赛德斯继承家业的决心，但梅赛德斯断言自己并没有继承家业，就像无视这一事实一样。</p>
-    <p>格鲁内瓦尔特的名称对于梅赛德斯来说，是限制自己行动的锁链。</p>
+    <p>格鲁内瓦特的名称对于梅赛德斯来说，是限制自己行动的锁链。</p>
     <p>因为现在有利用价值所以跟随着伯恩哈特，但是打算等到时候赶快把这样的锁链给切断了。</p>
     <p>而且，至少有一个人想要继承人的宝座。</p>
     <p>那么给我菲利克斯就行了。因为没有特意继承不需要的东西被兄弟憎恨的趣味。</p>
-    <p>“格鲁内瓦尔特好像是开学典礼时打招呼的人吧？”</p>
+    <p>“格鲁内瓦特好像是开学典礼时打招呼的人吧？”</p>
     <p>“梅赛德斯很好。确实作为新生代表登上了讲坛”</p>
     <p>“啊，那我也去汉娜吧。”</p>
     <p>汉娜对梅赛德斯对新生代表的寒暄「哈—」啦的「厉害」啦不停地佩服。</p>
