--- a/OEBPS/Text/c028.xhtml
+++ b/OEBPS/Text/c028.xhtml
@@ -61,7 +61,7 @@
     <p>比以前捕获的保罗沃尔夫·布朗小一圈，只有与孩子同样的身高。</p>
     <p>以这个魔物为对手，在课堂上学到的技能等都需要考验。</p>
     <p>魔物恐怕是依靠盾牌行会等得到的吧。</p>
-    <p>“下一个，格鲁内瓦尔特”</p>
+    <p>“下一个，格鲁内瓦特”</p>
     <p>被交给训练用的剑，向前出发。</p>
     <p>站在梅赛德斯面前的是一个比自己大一头、身材矮小的狼人。</p>
     <p>让十一岁的孩子拿着刀与魔物战斗，果然和日本的常识不同。</p>
