--- a/OEBPS/Text/c031.xhtml
+++ b/OEBPS/Text/c031.xhtml
@@ -66,7 +66,7 @@
     <p>“如果一个人能拥有那个迷宫的力量，你会怎么做？”</p>
     <p>听了伯恩哈特的故事，梅赛德斯无意识地触摸了口袋里的钥匙。</p>
     <p>果然，好像也有人知道真相。</p>
-    <p>这恐怕是普通人不知道的绝密情报吧，但即便如此，如果是格鲁内瓦尔特家当主的话，似乎也能得到一般情况下无法得到的信息。</p>
+    <p>这恐怕是普通人不知道的绝密情报吧，但即便如此，如果是格鲁内瓦特家当主的话，似乎也能得到一般情况下无法得到的信息。</p>
     <p>“以真意攻下迷宫的人，将被赋予迷宫本身。</p>
     <p>量产魔物、量产道具、单独拥有一国军队的巨大力量……但是，这是极其困难的，在历史上也仅有的”</p>
     <p>“军队是……不，在军队里没有办法吗？”</p>
@@ -96,7 +96,7 @@
     <p>普拉克地牢是比梅赛德斯攻略的舒塔克地牢难度更低的地牢。</p>
     <p>那么被攻略了的可能性比起sutarkudanjon不如高(贵)。</p>
     <p>但是，我不能断言没有被攻略的理由。</p>
-    <p>难道是让饲养小狗的士兵在里面待机，杀死了通关的纸箱吗？</p>
+    <p>难道是让饲养小狗的士兵在里面待机，杀死了通关的saker吗？</p>
     <p>如果是这个父亲，为了支撑城市的经济，似乎能做到那种程度。</p>
     <p>“把话说回来……说到攻略迷宫需要突出的个。</p>
     <p>并且如果以少数的实力者攻略了，那时谁把迷宫做为手纠纷吧。</p>
