--- a/OEBPS/Text/c032.xhtml
+++ b/OEBPS/Text/c032.xhtml
@@ -31,7 +31,7 @@
     <p>如果拥有这种力量的人出现在王家以外，那么自己的权威就会受到威胁。</p>
     <p>所以，王家虽然渴望迷宫的力量，却无法将攻略交给骑士等，无法揭开真相，只能将情报隐藏起来。</p>
     <p>如果说真心话，应该是想禁止入内……如果做那个从迷宫魔物溢出国家被蹂躏。</p>
-    <p>反正，也许有人会侮辱用纸箱无法使之真正地清除。</p>
+    <p>反正，也许有人会侮辱用saker无法使之真正地清除。</p>
     <p>“是说功能受到限制吧。”</p>
     <p>“恩。王家的人魔物的量产和使役，条款的量产等也好象可能,不过，那个全部只在洞窟预先登记着的东西。</p>
     <p>如果是真正的使者，通过新的魔物登陆，可以增加迷宫产生的魔物的种类……如果文献是正确的话”</p>
@@ -54,7 +54,7 @@
     <p>现在在这里的除了梅赛德斯、茨瓦尔夫以外还有本凯、小黑。</p>
     <p>迷失方向，继续迷失方向的舒夫，与前几天捕获的阿修塔尔的4人和1只一只。</p>
     <p>也许阿修塔尔也应该给它取个名字。</p>
-    <p>顺便一提，克利亚在格鲁内瓦尔特家看家。</p>
+    <p>顺便一提，克利亚在格鲁内瓦特家看家。</p>
     <p>“首先，正如主人所知道的那样，封装在万能钥匙上的携带、解冻、压缩等基本功能不是本人，只要继承血液就可以使用。</p>
     <p>同样也可以使用魔物、道具的量产”</p>
     <p>到这里梅赛德斯也知道。</p>
@@ -67,8 +67,8 @@
     <p>而且因为双方都有很高的战斗力，如果增加的话增加的话没有损失。</p>
     <p>但是因为只想批量生产舒夫变得异怪，批量生产还没做。</p>
     <p>“我问，重新注册本凯，会不会增加呢？”</p>
-    <p>“可以。但是本凯比通常的阿什拉Oga成本要高。</p>
-    <p>同时，这个情况是同样的魔物之前的阿修拉Oga被删除」</p>
+    <p>“可以。但是本凯比通常的阿什拉奥加成本要高。</p>
+    <p>同时，这个情况是同样的魔物之前的阿修拉奥加被删除」</p>
     <p>“嗯”</p>
     <p>梅赛德斯想，这个暂且保留可以吗？</p>
     <p>能增加本凯在战斗力上是魅力,不过，增加只服从自己的本凯后世的吸血鬼也只是困扰吧。</p>
@@ -111,7 +111,7 @@
     <p>·泰格茨消费点55</p>
     <p>・施瓦兹・沃尔夫范文消费点80</p>
     <p>・阿修塔尔消费点75</p>
-    <p>・阿修拉OGA消费点150</p>
+    <p>・阿修拉奥加消费点150</p>
     <p>·贝泽守护兽消费点145</p>
     <p>・百宝箱消费点100</p>
     <p>“魔物已经好了。稍后看”</p>
