--- a/OEBPS/Text/c033.xhtml
+++ b/OEBPS/Text/c033.xhtml
@@ -24,13 +24,13 @@
     <p>（话虽如此……真少啊？）</p>
     <p>知道能做到的事是件好事，但因此又产生了一个疑问。</p>
     <p>那个是点数明显少的事。</p>
-    <p>一年600P……是能四体生产阿修拉Oga的要点。</p>
+    <p>一年600P……是能四体生产阿修拉奥加的要点。</p>
     <p>如果是蟑螂的话就是六百个。如果是蟑螂的话可以生产一千八百个。</p>
     <p>我想一年就足够了。</p>
     <p>只要等十年就可以组成大军团。从吸血鬼的寿命来看只是很短的时间。</p>
     <p>可是，梅赛德斯感到这个少。</p>
     <p>因为，以这种程度的生产速度，自己成为主人之前的地牢不能发挥作用。</p>
-    <p>每天都有纸箱进入，每天都在狩猎魔物。</p>
+    <p>每天都有saker进入，每天都在狩猎魔物。</p>
     <p>即使假定强大的魔物怎么也打不倒，但是比起生产速度魔物减少的速度应该压倒性地快。</p>
     <p>也就是说，应该有。</p>
     <p>除了通过时间自然恢复以外，还有赚积分的方法。</p>
@@ -43,10 +43,10 @@
     <p>迷宫里太漂亮了。</p>
     <p>“茨瓦尔夫。增加玛娜的方法就是在迷宫内吸收生物和物质吧？”</p>
     <p>《YES，主人。迷失在迷宫内的野生动物、虫子、saker等在迷宫内死亡时，他们构成了纳米机器。</p>
-    <p>当然，完全分解需要花费时间，就像主人带回来的纸箱的遗体一样，死后马上带去的话可以回收”</p>
+    <p>当然，完全分解需要花费时间，就像主人带回来的saker的遗体一样，死后马上带去的话可以回收”</p>
     <p>我以为是性质恶劣的塔防御游戏。</p>
     <p>也就是说，比起像梅赛德斯那样经常拿着钥匙走的迷宫，解放后得到更多的积分，从而产生更多的魔物。</p>
-    <p>就算是纸箱，也不是要把打倒的所有魔物带回去，大部分都会被打倒放置不管，就算是目的的魔物，也会得到特定的部位再回去吧。魔物是很重的。</p>
+    <p>就算是saker，也不是要把打倒的所有魔物带回去，大部分都会被打倒放置不管，就算是目的的魔物，也会得到特定的部位再回去吧。魔物是很重的。</p>
     <p>那么，死去的魔物只要回到积分就可以被再利用，而saker也会陆续死去，所以成为迷宫的基础。</p>
     <p>做得真恶心。</p>
     <p>“什么啊，杜威尔夫”</p>
@@ -104,7 +104,7 @@
     <p>原来如此，让人想到还有这样的迷宫。</p>
     <p>确实，如果魔物在错综复杂的洞窟和遗迹等中居住的话，那几乎和迷宫没什么区别。</p>
     <p>不同的是，里面没有财宝吗？</p>
-    <p>“到里面去的话，那里有纸箱。</p>
+    <p>“到里面去的话，那里有saker。</p>
     <p>为了这次上课而雇佣的团队，人格确实是一帮人。</p>
     <p>收到那些家伙清除的证件后再回到这里来。</p>
     <p>四人一组按顺序进去”</p>
