--- a/OEBPS/Text/c034.xhtml
+++ b/OEBPS/Text/c034.xhtml
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>34.  穿白衣的目的</h1>
+    <h1>34. 穿白衣的目的</h1>
     <p>迷宫中变得比想象中更容易走路。</p>
     <p>恐怕是上课时使用的事，事先教师阵容整备着吧。</p>
     <p>即使设有陷阱，也首先要想没有使之受致命伤这样的危险的圈套。</p>
@@ -130,7 +130,11 @@
     <p>可是一瞬间，我看见了背影。</p>
     <p>那肯定是……是汉娜。</p>
     <p>看来，今后还得注意她的动向。</p>
-    
-    <p><span class="textmissing">[[丢失]]122l</span></p>
-    
+    <p class="divline"></p>
+    <p>メルセデス「ところでゴブリンヘクサーのフードいらないと思うんだが、それ無しで生産すれば少しはコスト削れないかな」</p>
+    <p>ツヴェルフ「まあ１Pくらいは節約出来ますね」</p>
+    <p>メルセデス「それと杖がないと魔法は使えないのか？」</p>
+    <p>ツヴェルフ「使えますが威力は落ちますね」</p>
+    <p>メルセデス「つまり催眠とかの魔法だけを使わせる分には必要ないわけだ。なら杖もいらないな」</p>
+    <p>ゴブリンヘクサー（やめて！？　フードと杖ないと俺、個性のないそこらのゴブリンと同じ外見になるから！）</p>
 </body>
