--- a/OEBPS/Text/c039.xhtml
+++ b/OEBPS/Text/c039.xhtml
@@ -169,7 +169,7 @@
     <p>恐怕就是这样，他开始怀疑自己是不是贝阿列克斯帝国的迷宫所有者。</p>
     <p>“而且……提起伯恩哈特的孩子，只有菲利克斯和被放置在隔壁的孩子们吧？</p>
     <p>我没想过伯恩哈特让菲利克斯以外的人去学校。</p>
-    <p>所以才叫格鲁内瓦尔特家的工作人员吧……。</p>
+    <p>所以才叫格鲁内瓦特家的工作人员吧……。</p>
     <p>但是，梅赛德斯的脸和伯恩哈特不像，氛围什么的完全一样，所以更加混乱了……”</p>
     <p>「呼。因为是我的女儿嘛，当然长得很像”</p>
     <p>“哇，我第一次看到这么高兴的伯恩哈特。”</p>
