--- a/OEBPS/Text/c040.xhtml
+++ b/OEBPS/Text/c040.xhtml
@@ -12,7 +12,7 @@
 <body>
     <h1>40. 迷走吧</h1>
     <p>汉娜.汉堡是向国家忠诚的隐密部队的队长。</p>
-    <p>原来她老家的格鲁内瓦尔特家是弱小贵族，是男爵家。</p>
+    <p>原来她老家的格鲁内瓦特家是弱小贵族，是男爵家。</p>
     <p>用这一代改动了弟弟伯恩哈特。</p>
     <p>在八十年前的兽人战争中取得了巨大战果的伯恩哈特，由于其功绩被承认自称是公爵，因此改名为伯恩哈特·冯·布鲁特·格鲁内瓦特，这个名字显得很了不起。</p>
     <p>“冯”是奥克思允许侯爵以上贵族当主佩戴的前置词，在统治下被允许冠以最大的城市中。</p>
@@ -22,13 +22,13 @@
     <p>他那无限的资金到底是从哪里涌出来的，汉娜也不告诉我。</p>
     <p>伯恩哈特说只有在迷宫里捡到的方法才能找到，解开魔石的制造方法，让它渗透到奥尔克斯，从而降低了纸巾的死亡率，提高了质量，从而生存下来的纸巾从迷宫带回了许多魔物的素材。富裕了城市。</p>
     <p>以前是敷衍了事的对saker的报酬和决定请求的难易度的事给行会规定义务，由于强制互相合作的事安排了效率上升。</p>
-    <p>并且，他还决定以纸箱的功绩和实力评级，毫不留情地从实力不足的纸箱中剥夺资格。</p>
+    <p>并且，他还决定以saker的功绩和实力评级，毫不留情地从实力不足的saker中剥夺资格。</p>
     <p>当初被反对的这个尝试，现在在世界中被模仿。</p>
     <p>弟弟那样在表面的世界无双的期间，汉娜在背面的世界显出着头角。</p>
     <p>在战争中虽然没有像弟弟那样华丽的活跃，但率领私兵在幕后奋战，接二连三地逮捕了敌方的间谍、工作人员、密探等。</p>
     <p>反过来对敌方着手工作，引诱同伴讨伐。</p>
     <p>她的工作得到好评，她及其私人士兵在有事时得到了允许自己行动的独立隐密部队的地位。</p>
-    <p>另外，弟弟就任格鲁内瓦尔特家当家的宝座的同时，汉娜也离家出走，嫁给了汉堡家。</p>
+    <p>另外，弟弟就任格鲁内瓦特家当家的宝座的同时，汉娜也离家出走，嫁给了汉堡家。</p>
     <p>汉堡家表面上是商人，但背后却起着观察物流和市势的作用，可以说是幕后的干部。</p>
     <p>说起来是政略结婚。弟弟为了从表面，姐姐从背面增强在这个国家的影响力嫁给了汉堡家。</p>
     <p>但是汉娜认为，虽然丈夫长得一般，而且萝莉控除了任务以外，还是个温柔的男人。</p>
@@ -86,7 +86,7 @@
     <p>这是为了抢先将自己的部下藏在学园里。</p>
     <p>就这样，和作为护卫潜入的汉娜同住一间房间的女学生说什么呢，真是怪异啊。</p>
     <p>名叫梅赛德斯·格鲁内瓦特。</p>
-    <p>格鲁内瓦尔特这个家名在这个国家只有一个，所以肯定是自己的老家吧。</p>
+    <p>格鲁内瓦特这个家名在这个国家只有一个，所以肯定是自己的老家吧。</p>
     <p>从年龄上来看，除了自己或伯恩哈特的孩子以外不可能有，当然，自己也不记得生过这样的孩子。</p>
     <p>而提起伯恩哈特的孩子，就是菲利克斯。</p>
     <p>现在在这个学园已经五年级的他当然知道。</p>
@@ -95,7 +95,7 @@
     <p>入学的时候也有考试，也就是说，不接受良好的教育而置之不理的侧室的孩子是不可能进入的，越是接受越不温柔的。</p>
     <p>更何况梅赛德斯的入学考试成绩居首位。</p>
     <p>入学问候是和吉克林德一起去的，但实际上连她都置之不理。</p>
-    <p>特别实际技巧沾染着怪物。无论怎么低估，A等级赛车与A等级赛车相比还是有实力的。</p>
+    <p>特别实际技巧沾染着怪物。无论怎么低估，A等级saker与A等级saker相比还是有实力的。</p>
     <p>不受教育而置之不理的侧室孩子能得到这样的学力吗？能得到这样的实力吗？</p>
     <p>不，断然否定。不可能有。</p>
     <p>（明显很奇怪……远远超过学生的水平……。</p>
@@ -185,12 +185,12 @@
     <p>对梅赛德斯这个存在置之不理太危险了。连目的都不知道。</p>
     <p>她到底是什么人，一定要搞清楚……！</p>
     <p>「诶？真的是格鲁内瓦特家的孩子？”</p>
-    <p>「是的。真的是格鲁内瓦尔特家的”</p>
+    <p>「是的。真的是格鲁内瓦特家的”</p>
     <p>“……那个已经11岁了？”</p>
     <p>「是的。那年十一岁”</p>
     <p>“……明明是被放置在侧室的孩子，成绩第一吗？”</p>
     <p>“明明是被放置在侧室里的孩子却成绩第一。”</p>
-    <p>“也就是说什么？梅赛德斯桑真的只:是，不像十一岁的十一岁，没有受过良好的教育却取得了学园第一的成绩的菲利克斯君是个泪眼很厉害的孩子，虽然没有接受训练，但比A级赛车更强，更能驯服魔鬼能做到的事，只是皮肤和头发的光泽不可能的那样好，怎么考虑也过分,不过，尽管如此真的只是没有背面的孩子吗？</p>
+    <p>“也就是说什么？梅赛德斯桑真的只:是，不像十一岁的十一岁，没有受过良好的教育却取得了学园第一的成绩的菲利克斯君是个泪眼很厉害的孩子，虽然没有接受训练，但比A级saker更强，更能驯服魔鬼能做到的事，只是皮肤和头发的光泽不可能的那样好，怎么考虑也过分,不过，尽管如此真的只是没有背面的孩子吗？</p>
     <p>“原来是这样啊”</p>
     <p>汉娜接到部下的报告，仰望天空。</p>
     <p>不可能。怎么想也是不可能的。</p>
