--- a/OEBPS/Text/c041.xhtml
+++ b/OEBPS/Text/c041.xhtml
@@ -64,7 +64,7 @@
     <p>布鲁特是伯恩哈特治理的城市的名字，是琉迪亚和玛吉特生活的地方。</p>
     <p>并且，要说在那里一号的厨师，想起的只有一人。</p>
     <p>“……难道那个厨师的名字不是舒夫吗？”</p>
-    <p>“恩，是啊。这么说来，舒夫君是格鲁内瓦尔特家的厨师长吧”</p>
+    <p>“恩，是啊。这么说来，舒夫君是格鲁内瓦特家的厨师长吧”</p>
     <p>又是那个家伙。这样想着，梅赛德斯和伯恩哈特同时用手捂住了脸。</p>
     <p>那个恶魔真的往哪里去了？</p>
     <p>话说回来，假设种族名是恶魔贝赛德兽，却完全没有做出和名字相符的事情。</p>
