--- a/OEBPS/Text/c042.xhtml
+++ b/OEBPS/Text/c042.xhtml
@@ -21,7 +21,7 @@
     <p>伊扎克养吉克林德父女，定期采集血液的事根据调查判明。</p>
     <p>于是，汉娜又从王城工作的厨师那听说了把血给自己的孩子。</p>
     <p>……说点题外话，那位厨师在尽情吐露情报后被汉娜的手处刑。</p>
-    <p>然而，汉娜从外面雇佣的厨师却是格鲁内瓦尔特家的厨师长施夫，这让柏恩哈特也大吃一惊。</p>
+    <p>然而，汉娜从外面雇佣的厨师却是格鲁内瓦特家的厨师长施夫，这让柏恩哈特也大吃一惊。</p>
     <p>总之先把话说回来。</p>
     <p>那个愚****，因为持续给予自己的孩子吉克林德的血的事，不知不觉变得能使用王剑的可能性依靠着。</p>
     <p>当然不可能用那种方法将迷宫的所有权转移。</p>
