--- a/OEBPS/Text/c043.xhtml
+++ b/OEBPS/Text/c043.xhtml
@@ -1,24 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-
 <head>
     <title>CONTENTS</title>
     <link href="../Styles/Style0001.css" type="text/css" rel="stylesheet" />
     <link href="../Styles/charactersaidtext.css" type="text/css" rel="stylesheet" />
     <link href="../Styles/status.css" type="text/css" rel="stylesheet" />
 </head>
-
 <body>
-    <h1>43. 丢失</h1>
-    <p><span class="textmissing">[[丢失]]147l</span></p>
-    
+    <h1>43. 魔物バトル（バトルするとは言ってない）</h1>
+    <p>王剣を巡る騒動は終わり、メルセデスは学園生活へと戻った。</p>
+    <p>しかし、まだ完全に学業の邪魔になる連中を排除出来たわけではない。</p>
+    <p>暗殺者連中に襲撃のタイミングを知らせていた内通者は未だ誰だか判明しておらず、不安の種が学園内に残ってしまっている。</p>
+    <p>これを見付けだして始末しない限り、本当の平穏は戻って来ないだろう。</p>
+    <p>ジークリンデはこのまま城で暮らすかと思っていたが、何と彼女は己の性別と境遇を皆に明かした上で学園に留まってしまった。</p>
+    <p>これには彼女のファンだった女生徒全員が驚き、ドードに至っては失神までした。</p>
+    <p>しかし一部から『キマシタワー！』というやたらハイテンションな声があがったのが気になる。</p>
+    <p>モニカの同類だろうか？</p>
+    <p>また、ジークリンデの正体判明と同時に学園の警備が強化され、常に学園内を兵士が巡回するようになった。</p>
+    <p>無論全員、ベルンハルトの息がかかった兵士だ。</p>
+    <p>メルセデスとしては、内通者がまだ残っている上にいつ暗殺者が出るか分からない学園よりも城でジークリンデを守るべきだろうと思うのだが、これに対しベルンハルトはこう答えた。</p>
+    <p>「城にはまだ、イザークについて甘い汁を吸っていたカス共が紛れている。他国の間者も何人かいるだろう。</p>
+    <p>全て洗い出し、粛清するまでは王女を置くのはかえって危険だ。まだ学園の方がマシだろう」</p>
+    <p>要約すると、粛清の嵐を吹かして邪魔な貴族を一掃し、自分が今以上の権力を握るのに王女が邪魔だからしばらく学園に隔離したいという事だ。</p>
+    <p>この男が誰かを守るなんて目的で骨を折るものか。</p>
+    <p>その事を指摘してやると、ベルンハルトは満足そうにニヤリと笑った。</p>
+    <p>駄目だこの外道……早く何とかしないと……。</p>
+    <p>季節は巡り、夏が訪れる。</p>
+    <p>王剣を巡る騒動で暴れたのが原因なのか、最近ではやたら他の生徒が媚を売ってくるのが鬱陶しい。</p>
+    <p>メルセデス自身にその気が無かろうと、彼女はいまや王女を救い、偽の王家を打倒した英雄だ。</p>
+    <p>当然生徒達の興味と好奇の視線を勝ち取ってしまい、親の命令なのかそれとも本人の判断なのかは知らないが、やたら擦り寄って来る連中が増えてしまった。</p>
+    <p>「ねえメルちゃん、メルちゃんは狩猟祭出る？」</p>
+    <p>「まあ、一応参加してみますが……それより何故、貴方がまだ学園にいるかが気になります、伯母様」</p>
+    <p>「もー！敬語固いって！前までと同じでハンナちゃんって呼んでくれていいんだよ」</p>
+    <p>「そうか。なら敬語は外そう、おばさん」</p>
+    <p>「おばさん呼びはやめて！？」</p>
+    <p>夏には狩猟祭というイベントがある。</p>
+    <p>それに参加するかどうかを聞いて来るのは、何故かまだ学園に留まっているハンナ・バーガー（１０７歳。子持ち）だ。</p>
+    <p>「で、何故まだいるんだ？」</p>
+    <p>「んー……メルちゃんも言ってたでしょ？まだ内通者がいるって。</p>
+    <p>それを捕まえるのが今の私の仕事なのよ。それと王女様の護衛の指揮も私がとってるしね」</p>
+    <p>「……生徒に変装する必要は？」</p>
+    <p>「生徒として潜入する方が近くにいれるし、色々と見えるものもあるのよ。</p>
+    <p>それに似合ってるでしょ？」</p>
+    <p>そう言い、ハンナはきゃるんとポーズを取った。</p>
+    <p>「無理するなおばさん」</p>
+    <p>「！？」</p>
+    <p>しかしこの塩対応である。</p>
+    <p>ハンナは少し泣いた。</p>
+    <p>「はあー……メルちゃんって見た目は可愛らしいのに、中身は女の子版ベルンハルトって感じだよねえ。気に入られるのも分かるわ」</p>
+    <p>「いくら気に入られようが、用が済んだら当主の座などフェリックスに押し付けてさっさと出て行くがな」</p>
+    <p>「フェリックス君ねえ……まあ、真面目な子だし頑張ってはいるんだけどね」</p>
+    <p>今はここにいないフェリックスの事を思い浮かべ、ハンナは顔をしかめた。</p>
+    <p>通常、貴族の家督というものは長男が継ぐものだ。それがこの国の常識である。</p>
+    <p>しかしそこは常識など踏み越えるのが当然のベルンハルト。しきたりになど縛られない。</p>
+    <p>彼は彼自身の判断こそを最上と考えるが故に、周囲の反対も常識も無視してメルセデスを跡目につかせる気でいる。</p>
+    <p>ハンナはそれが分かっているからこそ、フェリックスを不憫に思ったのだ。</p>
+    <p>「何か、ベルンハルトを認めさせるような手柄でも上げれば話は違うんだけどね」</p>
+    <p>「手柄、か……」</p>
+    <p>メルセデスとしてもフェリックスがぞんざいに扱われている現状はあまりいいものではない。</p>
+    <p>可哀想だとかそういう感情は抱かないし、割とどうでもいいのだがフェリックスが評価されないと本当にこちらに跡継ぎが押し付けられてしまう。</p>
+    <p>無論逃げるつもりではあるが、一番丸く収まるのはやはりフェリックスに押し付けて行く事だ。</p>
+    <p>そういう点で言えばフェリックスがある程度ベルンハルトに認められている方がいい。</p>
+    <p>しかしだからといって狩猟祭の優勝を譲ってやっても意味はないだろうし、そんな事をしても普通にベルンハルトにバレる。</p>
+    <p>それにたかが学園のイベントで一位を取ったくらいであの男が評価を変えるとも考えにくい。</p>
+    <p>もっと大きな、無視出来ない手柄をあげさせれば楽なのだが……。</p>
+    <p>「考えておこう」</p>
+    <p>今は特にこれといって思い付かない。</p>
+    <p>メルセデスは話を打ち切り、机の上に羊皮紙を広げて自習にとりかかった。</p>
+    <p>◆</p>
     <p class="divline"></p>
     <p>狩猎节前还有一个活动。</p>
     <p>那是前几天上课时捕获的魔物们进行的模拟战。</p>
     <p>可是有关这个从开始之前开始梅赛德斯的压倒性胜利显现出来。</p>
     <p>不管怎么说，梅赛德斯上课时捕获的阿修塔尔本来就是不生活在平原上的，为了袭击吉克林德而被送入的凶恶怪物。</p>
-    <p>不是能够用学生能够捕获的魔物来对抗的怪物，而是连A级别的求婚者都可能不知不觉的对手。</p>
+    <p>不是能够用学生能够捕获的魔物来对抗的怪物，而是连A级别的saker都可能不知不觉的对手。</p>
     <p>问题是能否熟练使用这样的魔物，那里是遵从本凯和小黑的梅赛德斯。</p>
     <p>没有任何问题，阿修塔尔通过停在梅赛德斯的手臂上显示出自己的忠诚。</p>
     <p>顺便一提，阿修塔尔的重量超过300公斤。</p>
@@ -63,5 +119,4 @@
     <p>在那样的平原上出现的兔子的魔物不可能很强。</p>
     <p>此后梅赛德斯的模拟战对方全体人员弃权，结果也没有战斗装饰了第一位。</p>
     <p>看着同班同学的魔物们复制的那双被夺走了美味佳肴的悲伤的眼睛给我留下了深刻的印象。</p>
-    
 </body>
