--- a/OEBPS/Text/c045.xhtml
+++ b/OEBPS/Text/c045.xhtml
@@ -28,7 +28,7 @@
     <p>相貌不坏，但也不是美男子。</p>
     <p>一脸轮廓清晰。可是奇特的打扮毁坏着好不容易角度的素材。</p>
     <p>骑着男子的马在迷茫的梅赛德斯面前停了下来，把男子甩了下去。</p>
-    <p>被掉落的男子以崩溃的青蛙般的姿势倒在了地上,不过，马上站起来俯视梅赛德斯。</p>
+    <p>被掉落的男子以崩溃的Elka般的姿势倒在了地上,不过，马上站起来俯视梅赛德斯。</p>
     <p>“小丫头。你是梅赛德斯·格鲁内瓦特吧？我是吉克斯图斯·谢恩贝尔克。</p>
     <p>作为谢恩贝尔克侯爵家的长子，迟早要继承谢恩贝尔克领地的男人哟。</p>
     <p>年龄是今年二十岁！因为品行恶劣而留级两次！”</p>
