--- a/OEBPS/Text/c047.xhtml
+++ b/OEBPS/Text/c047.xhtml
@@ -119,7 +119,7 @@
     <p>“因为想要什么，就给她吧，她的本领真不错……”</p>
     <p>“现场识别名‘邮件夹哈泽’。擅长使用武器的兔型魔物。</p>
     <p>空手的战斗能力是杂鱼,不过，是到刀，钝器，弓，枪器为止全部的武器熟练使用，只是握住一把刀等级很大地变动的新奇的种类。</p>
-    <p>由于“Dearaiehaze”只能在众多战斗中生存，所以突发进化，时不时地在洞窟的浅层和只有弱小魔物的平原上出现，导致疏忽大意的纸箱等全部毁灭。</p>
+    <p>由于“Dearaiehaze”只能在众多战斗中生存，所以突发进化，时不时地在洞窟的浅层和只有弱小魔物的平原上出现，导致疏忽大意的saker等全部毁灭。</p>
     <p>同时，因为讨厌被密闭了的空间进化同时从迷宫外边出来了对迷宫的登记被认为是极为困难。</p>
     <p>根据持有的武器强度变动,不过，让持枪的时候的危险度超过阿修塔尔」</p>
     <p>小兔子装填下个子弹，瞄准倒下的白衣发射了。</p>
