--- a/OEBPS/Text/c052.xhtml
+++ b/OEBPS/Text/c052.xhtml
@@ -69,7 +69,7 @@
     <p>最后一天结束的正餐。主要在凌晨时段，相当于其他法尔什的晚餐。</p>
     <p>与明亮的时候行动的法鲁什没有深夜食同样，吸血鬼没有早餐。</p>
     <p>因为对于吸血鬼来说，早晨和其他法鲁什相比就如同深夜一般。</p>
-    <p>据说当天的正餐晚餐全家一起吃，在格鲁内瓦尔特家成为了新奇的情况。</p>
+    <p>据说当天的正餐晚餐全家一起吃，在格鲁内瓦特家成为了新奇的情况。</p>
     <p>在伯恩哈特，他的妻子瓦尔布加。以琉迪亚为首的侧室的女性四人。　</p>
     <p>还有菲利克斯、梅赛德斯、莫尼卡、玛吉特、戈特弗里特等。</p>
     <p>首先端出来的菜是理所当然的香肠。</p>
