--- a/OEBPS/Text/c055.xhtml
+++ b/OEBPS/Text/c055.xhtml
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>55.  武艺祭</h1>
+    <h1>55. 武艺祭</h1>
     <p>虽然梅赛德斯在捕获几只奥克的同时好不容易到达了十五层，但仍然没有门。</p>
     <p>取而代之的是3米大小的巨大蜥蜴……不，是龙。</p>
     <p>稍稍驼背以二足步行站立，全身绿色的鳞被覆盖。</p>
@@ -91,4 +91,10 @@
     <p>结果下级生的部分优胜的是吉克林德，上级生以吉克斯图斯激战后优胜闭幕了。</p>
     <p>菲利克斯以亚军告终，但正统派果然很强。</p>
     <p>但是，观众席中已经没有了伯恩哈特的身影。</p>
+    <p class="divline"></p>
+    <p>ジクストゥス（２０）「フハハハハハ！　俺こそ学園最強だ！」</p>
+    <p>教師（そりゃあこいつだけ二十歳なんだから勝つの当たり前だよなあ……）</p>
+    <p>教師（誰かこいつ参加禁止にしろよ……）</p>
+    <p>教師（座学がクソすぎて毎年赤点で留年してるけど、実技だけは強いんだよなコイツ）</p>
+    <p>ハンナ（フェリックス君、実質優勝なのに可哀想……）</p>
 </body>
