--- a/OEBPS/Text/c056.xhtml
+++ b/OEBPS/Text/c056.xhtml
@@ -18,7 +18,7 @@
     <p>如果发生战争，残兵就会在那里出现，残兵为了生存而袭击村庄，抢夺食物。</p>
     <p>也就是说，小偷会增加。</p>
     <p>那个讨伐不是寻呼机的工作。这是领主的工作。</p>
-    <p>虽然也可以委托使用纸箱，但首先谁都不会接受吧。</p>
+    <p>虽然也可以委托使用saker，但首先谁都不会接受吧。</p>
     <p>即使想发奖金，接受奖金的也只有极少部分有把握的人。</p>
     <p>要说为什么，是因为风险太大了。</p>
     <p>为了沦落为野盗，对手是原士兵。他是一位经历过战争的人，无论以什么形式，都从名为战争的地狱中生还的勇士。</p>
