--- a/OEBPS/Text/c058.xhtml
+++ b/OEBPS/Text/c058.xhtml
@@ -87,9 +87,9 @@
     <p>“别这样。那个太贵了”</p>
     <p>吉克林德首先列举的候选人是巧克力。</p>
     <p>作为想法确实是正确的。原来梅赛德斯也是为此开发了巧克力，并向三得利提供了技术。</p>
-    <p>但是，三人狗把巧克力的价格转向了贵族，所以已经不能再使用了。</p>
+    <p>但是，トライヌ把巧克力的价格转向了贵族，所以已经不能再使用了。</p>
     <p>作为保存食品，价格太贵了。</p>
-    <p>因为梅赛德斯的开发，能便宜地购买到，现在在迷宫内从triu送了的巧克力相当的量也被保存。</p>
+    <p>因为梅赛德斯的开发，能便宜地购买到，现在在迷宫内从トライヌ送了的巧克力相当的量也被保存。</p>
     <p>如果放进迷宫里就不会腐烂，但是可以通过控制拥有分解物体的纳米机器。</p>
     <p>“罐头也很贵啊。虽然价格好像一点点下跌”</p>
     <p>汉娜看着店头摆放的罐头价格牌喃喃自语。</p>
