--- a/OEBPS/Text/c059.xhtml
+++ b/OEBPS/Text/c059.xhtml
@@ -21,8 +21,8 @@
     <p>“果然大家都在准备移动用的魔物。”</p>
     <p>“但是好像也有很多孩子没买到。嘛，有用的魔物已经卖完了”</p>
     <p>奇克林德一边观察其他学生的情况一边说，汉娜也好象预料的那样回答了。</p>
-    <p>这次学生支付的军费是每人2万只青蛙。</p>
-    <p>因为那是二十人，所以学校承担着四十万只青蛙。</p>
+    <p>这次学生支付的军费是每人2万只Elka。</p>
+    <p>因为那是二十人，所以学校承担着四十万只Elka。</p>
     <p>我想是不是太饿了，仔细想想，作为学费从学生们的父母那里收取，应该没问题吧。</p>
     <p>那么，考虑到以前梅赛德斯购买的登山运动场花费了30万，也许2万就什么也买不到了。</p>
     <p>但是，魔物的价格也是粉碎的，在这个世界上能载人行走的大小的魔物以仓鼠那样的价格被拍卖也不是什么稀奇的事情。</p>
@@ -30,7 +30,7 @@
     <p>与其说是仓鼠的价格，不如说是仓鼠的价格。</p>
     <p>对吸血鬼容易亲近夜行性，如果一个人左右载着跑的事也能。</p>
     <p>体力也溢出，如果3小时左右持续跑也没有问题。</p>
-    <p>价格竟是五千只简便的青蛙。用孩子的零花钱买到了。</p>
+    <p>价格竟是五千只简便的Elka。用孩子的零花钱买到了。</p>
     <p>有在脸颊袋里储存东西的习性,不过，不能吃的东西不吞下，在特殊的袋子里装入保存食品和工具放入脸颊袋使之搬运的事也是可能的。</p>
     <p>但是问题点也很多。因为智力不那么高(贵)正确不明白说的事多，胆怯马上引起恐慌向奇怪的方向逃跑了。</p>
     <p>经常听说因为兴趣而把饲主塞进面袋里的事件。</p>
@@ -98,7 +98,7 @@
     <p>这次，没有准备移动用魔物的学生只有三人。</p>
     <p>梅赛德斯，汉娜，还有德德·里约提的学生。</p>
     <p>汉娜现在正保持着通过这条路线的学生们中间的排名，这是有意识的吧。</p>
-    <p>多德·里约特用风魔法在天空中一边制造脚手架，一边在空中奔跑。</p>
+    <p>多德·里约特用风魔法在天空中一边制造立足点，一边在空中奔跑。</p>
     <p>脚吧嗒吧嗒地动着，看起来像在飞，总觉得是个傻瓜。</p>
     <p>并且还披露了在路上的树枝上缠绕作为爱用武器的鞭子，用其反动从树上跳到树上等立体的机动。</p>
     <p>与做着那样的意义不明白的事的辈比较的话吉克林德非常认真易懂。</p>
