--- a/OEBPS/Text/c060.xhtml
+++ b/OEBPS/Text/c060.xhtml
@@ -50,7 +50,7 @@
     <p>继续使用的，是最初也使用了的雾的魔法。</p>
     <p>虽然没有遮住追手视线的效果，但总比不做要好吧。</p>
     <p>这样一来，警惕对方没有的圈套和奇袭，放松行动的话，就无话可说了。</p>
-    <p>菲利克斯·格鲁内瓦尔特不是天才。</p>
+    <p>菲利克斯·格鲁内瓦特不是天才。</p>
     <p>但是他是个秀才。</p>
     <p>在这个年龄段里，不习惯使用派生属性，正是因为他每天的锻炼。</p>
     <p>魔法属性是火和水，特别擅长水。</p>
