--- a/OEBPS/Text/c062.xhtml
+++ b/OEBPS/Text/c062.xhtml
@@ -24,7 +24,7 @@
     <p>移动距离、速度、体力。在那些全部中，Gigantish仓鼠凌驾着马。</p>
     <p>可是由于这个性能gigantishuhamusuta没被骑兽正式采用。</p>
     <p>岂止如此，马匹的对抗马（对抗鼠？）连老师都不会。为什么呢？</p>
-    <p>价格是连孩子的零花钱都能买到的5000只青蛙。也有繁殖力很强个体数多的理由,不过，总之是那么多便宜。</p>
+    <p>价格是连孩子的零花钱都能买到的5000只Elka。也有繁殖力很强个体数多的理由,不过，总之是那么多便宜。</p>
     <p>至少，如果军队正式采用的话，不可能有这样的价格。</p>
     <p>虽然Gigantish仓鼠可以代替骑兽，但是没有正式录用。</p>
     <p>那个理由很单纯……。</p>
