--- a/OEBPS/Text/c069.xhtml
+++ b/OEBPS/Text/c069.xhtml
@@ -11,7 +11,7 @@
 
 <body>
     <h1>69. 挖掘心灵的巨人</h1>
-    <p>——伯恩哈特·格鲁内瓦尔特拥有迷宫。</p>
+    <p>——伯恩哈特·格鲁内瓦特拥有迷宫。</p>
     <p>那是在一部分高位贵族之间被认真地低声私语的传闻。</p>
     <p>来源不明的巨额资金。对蓝特来说太方便了的实用迷宫。</p>
     <p>没有关系，被认可一代晋升为公爵家的破例晋升。</p>
