--- a/OEBPS/Text/c071.xhtml
+++ b/OEBPS/Text/c071.xhtml
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>71.  歪曲的国家</h1>
+    <h1>71. 歪曲的国家</h1>
     <p>谁最先将有气势的前进表现为“破风”呢？</p>
     <p>一边想着那样的事，梅赛德斯一边从皮可上俯视着地面。</p>
     <p>皮可现在的速度大约是100公里的时速。</p>
@@ -42,9 +42,90 @@
     <p>然后徒步走近门口，站在那里的两个门卫交叉着枪挡住门前。</p>
     <p>两个都是男吸血鬼。</p>
     <p>“出示身份证”</p>
+    <p>按照他说的那样，从口袋里拿出saker卡给他看。</p>
+    <p>果然不会有像是提出格林涅瓦特这个名字的傻子。</p>
     <p>就这样，从口袋里拿出saker给你看。</p>
     <p>真不愧是格鲁内瓦特的**。</p>
-
-    <p><span class="textmissing">[[丢失]]216</span></p>
-
+    <p>「メルセデス・カルヴァート……ランクはＣか」</p>
+    <p>「ふむ。念の為身体調査をさせてもらう。そちらの小屋に入れ」</p>
+    <p>　門の近くには兵の詰め所らしき小屋があり、そこに入るよう促される。</p>
+    <p>　まあ都市として当然の対応か。</p>
+    <p>　中には女性兵がおり、装備も門番の二人と比べてかなり上質なものを着けている。</p>
+    <p>「すまないが、これも規則でな。何か危険な物を所持していないか調べる必要がある。</p>
+    <p>悪いが服を脱いでくれ。ああ、男共は外させるから心配するな」</p>
+    <p>「武器を持っているが、これはどうなる？　シーカーとしての必需品なのだが」</p>
+    <p>「それは問題ない。検査対象になるのはもっと別の物だ。</p>
+    <p>例えば爆弾だとか、取引を禁止されている薬物だとか……そういうのを持っているような輩は通す事は出来ん」</p>
+    <p>　大都市を守る上では当然の措置か。</p>
+    <p>　そう思い、メルセデスはその場で下着姿になって軽い調査を受けた。</p>
+    <p>　その結果、引っかかったのは所有していた火の魔石だ。</p>
+    <p>　これもどうやら爆弾扱いになるらしい。</p>
+    <p>　勿論マスターキーはただのアクセサリーにしか見えないので余裕でスルーされた。</p>
+    <p>「悪いがこれは一時預からせてもらおう。預かった物は外に出る時に返却する。</p>
+    <p>ここに名前と品を書いておいてくれ」</p>
+    <p>　火の魔石を没収されてしまったが、まあ仕方あるまい。</p>
+    <p>　幸い外に出していたのは店で買ったもので、無限使用が出来るダンジョン製魔石ではないので、このまま無くなっても痛手ではないのが幸いだ。</p>
+    <p>　それに、あくまで一時預かるだけでちゃんと返してくれるようだ。</p>
+    <p>　渡された羊皮紙に名前と没収された品を書き、それから通行許可証を渡された。</p>
+    <p>「ようこそ帝都へ。問題を起こさぬ限り、わが都市は貴方を歓迎しよう」</p>
+    <p>　何とか第一の関門である検査をパスし、門へと向かう。</p>
+    <p>　その途中、何故か門前で裸にされている男が見えた。</p>
+    <p>　どうやらメルセデス同様に荷物検査らしいが、男の場合はその場でひん剥かれるらしい。</p>
+    <p>　酷い検査もあったものだ。あれでは寒いだろうに。</p>
+    <p>　メルセデスに続いて女性兵が詰め所から出て、門番達に声をかける。</p>
+    <p>「何か怪しい物を持っていたか？」</p>
+    <p>「はっ、長剣と火の魔石を所持しておりました」</p>
+    <p>「没収しろ。危険な物を持った輩を都市に入れるわけにはいかん」</p>
+    <p>　何か様子がおかしい。</p>
+    <p>　メルセデスは先ほどの自分への対応と、男への対応に差がある気がしてしばらくその場で見物する事にした。</p>
+    <p>　もしやあの男は前科持ちか何かなのだろうか。</p>
+    <p>「ま、待ってくれ！　それは護身用だ！　それに俺はシーカーだ、武器がなきゃ話にならん！」</p>
+    <p>「これも規則だ。嫌ならば都市に入るのを諦めろ」</p>
+    <p>「あ、後で返してくれるんだよな！？」</p>
+    <p>「返すわけがなかろう。返した途端に襲ってくる可能性もあるのだからな」</p>
+    <p>「あ、あんまりだ！　俺が何をしたってんだ！」</p>
+    <p>「何も。ただこれが規則だ。嫌なら嫌で別にいい、さっさと立ち去るがよい」</p>
+    <p>　どうやら別に前科持ちだから厳しいわけではないらしい。</p>
+    <p>　では何だろう？　シーカーのランクだろうか。</p>
+    <p>　あり得る話だ。ランクの低い者は信用がない。ただのチンピラがとりあえず登録しただけという可能性もあるのだ。</p>
+    <p>　しかしそれも、男の言葉で否定されてしまった。</p>
+    <p>「俺はランクＣのシーカーだ！　身元はギルドが保証してくれている！</p>
+    <p>問題なんか起こすわけねえだろう！」</p>
+    <p>「そう言う奴に限って問題を起こすのだ」</p>
+    <p>「そ、そんな……待てよ！　そいつ！　そいつ武器持ってるじゃねーか！」</p>
+    <p>　男はどうやらこちらに気付いたようで、メルセデスが腰に差した剣を指差して叫んだ。</p>
+    <p>　この剣は言うまでもなく、本当の武器であるマスターキーを隠すためのフェイクである。</p>
+    <p>　なので没収されても問題はなかったのだが、メルセデスは特にお咎めなく帯剣を許されてしまっていた。</p>
+    <p>「女性なのだ。護身用の武器くらい必要だろう」</p>
+    <p>「はあ！？　それおかしいだろ！」</p>
+    <p>「黙れ。都市に入るか去るか、どちらなのだ。私も暇ではないのだぞ」</p>
+    <p>「ちくしょう！」</p>
+    <p>　これは酷い。</p>
+    <p>　明らかな性差別だ。あの女性兵の装備といい、門番として男の兵が立たされている事といい、どうもこの都市は女の方が立場が強いようだ。</p>
+    <p>　これはいよいよもって、フェリックスの身が危険だ……そう思いながらメルセデスは門を通過して都市へと足を踏み入れた。</p>
+    <p>　立ち並ぶ建築物は割と高い建築技術で造られているようで、大半が煉瓦製だ。</p>
+    <p>　四角に固めたブロックを積み上げて造るタイプだな。</p>
+    <p>　窓は豪華にも硝子が張られていて、中世文化という事を考えればどこも裕福層であると見ていい。</p>
+    <p>　地面も石を敷き詰めて整備されており、歩きやすい。</p>
+    <p>　月明かりに照らされた夜道を人々が行き交い、談笑している。それだけでここがかなり賑わっている都市であると分かった。</p>
+    <p>　しかし一方で気になる点もある。それは先ほどから全く男を見ないという事だ。</p>
+    <p>　どれだけ歩いても見かけるのは女性ばかりだ。男がどこにもいない。</p>
+    <p>　やがて、歩き続けたメルセデスは明らかに空気の違う場所へ迷い込んでいた。</p>
+    <p>　先ほどまでの裕福層ばかりが住んでいるような街並みから一転し、建築物の質が一気に落ちている。</p>
+    <p>　家はどこも木材で造られ、窓にはガラスなどなく木の板で塞がれている。</p>
+    <p>　貧民街だろうか？　どこの都市でもさほど珍しい場所ではないが……それより気になるのは、ようやく男を発見出来た事か。</p>
+    <p>　服装は女性と比べて明らかに質で劣り、薄汚い。</p>
+    <p>　体も清潔にしていないのか、汚れが目立っている。</p>
+    <p>　そんな男達が数人行き来しており、メルセデスと目が合うと逃げるようにそそくさと立ち去って行く。</p>
+    <p>（門の前でもそうだったが、これは……）</p>
+    <p>　どうやら、この国は完全な女性社会というわけだ。</p>
+    <p>　メルセデスは呆れたように溜息を吐き、とりあえずどうやって城に忍び込んでフェリックス達を助けるかを考え始めた。</p>
+    <p>Ｃランクシーカー「男は何もつけるなという事だな……了解した！　これより全裸で帝都に入る！」</p>
+    <p>女性兵「ファッ！？　ま、まて！　何故そうなる！」</p>
+    <p class="divline"></p>
+    <p>Ｃランクシーカー「危険なものは没収すると言ったのはそちらだ。ならばこその全裸！　これならば危険物などどこにもない」</p>
+    <p>女性兵「いや、確かにそうだが……！」</p>
+    <p>Ｃランク「いざ帝都へ！」</p>
+    <p>女性兵「ヤメロォ！」</p>
+    <p>足止めされていたＣランクシーカーさんも無事に帝都に（全裸で）入れたようです。</p>
 </body>
