--- a/OEBPS/Text/c075.xhtml
+++ b/OEBPS/Text/c075.xhtml
@@ -34,7 +34,7 @@
     <p>有时也会颠覆这种不利，用一百个兵力战胜千个敌人的名将吧。</p>
     <p>但是，这只是极少部分的例外，基本上多数人占压倒性优势。</p>
     <p>就算是梅赛德斯，也未必没有经历过多对一的战斗。</p>
-    <p>在格鲁内瓦尔特府邸，他有时也从容地抓住了大批野盗的胜利。</p>
+    <p>在格鲁内瓦特府邸，他有时也从容地抓住了大批野盗的胜利。</p>
     <p>但是那完全没有野盗共同的联合，作为群体没有作用。</p>
     <p>一个人走十次跟十个人一次走完全不同。</p>
     <p>没有取得联合的乌合之众等，只要一对一地反复击破就可以了。如果高速地重复那个有多少人结果是一样的。</p>
@@ -44,7 +44,7 @@
     <p>恐怕是经过漫长的岁月不断量产强大的魔物吧。</p>
     <p>只考虑自然的积蓄的要点，如果花费一百年以上的时间多少膨胀也不明白。</p>
     <p>另外，贝阿朵里克斯还预测，男囚犯和男奴隶可能被困在迷宫里。</p>
-    <p>那样的话可以。连阿修拉Oga级的魔物的量产也。</p>
+    <p>那样的话可以。连阿修拉奥加级的魔物的量产也。</p>
     <p>只有强兵构成的暴力。而且因为那个象吸血鬼一样地不持(有)各自的思想和随意的考虑等，主人的意思的那样使之移动没有背叛和独断专行的担心，死也不害怕。</p>
     <p>并且因为替换好使即使一次性也自由自在。</p>
     <p>确实是理想的军队。成为敌人后再没有比这更麻烦的了。</p>
