--- a/OEBPS/Text/c078.xhtml
+++ b/OEBPS/Text/c078.xhtml
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>78.  影武者</h1>
+    <h1>78. 影武者</h1>
     <p>梅赛德斯一边听着贝阿列克斯的求爱，一边思考着该怎么办。</p>
     <p>从去年开始持续的吉克林德周围的问题，全部这个女人是元凶。</p>
     <p>总之是梅赛德斯的敌人，一般来说除了排除以外没有别的选择。</p>
@@ -20,7 +20,7 @@
     <p>并且如果一国的憎恶全部朝向了梅赛德斯……真麻烦。即使有迷宫，也不能首先平稳地度过今后吧。</p>
     <p>也就是说，这家伙还不能杀。</p>
     <p>所以当初梅赛德斯所想的是第二个选项……即“活生生地排除”。</p>
-    <p>梅赛德斯在格鲁内瓦尔特的宅邸里学到了允许雷属性的禁咒。</p>
+    <p>梅赛德斯在格鲁内瓦特的宅邸里学到了允许雷属性的禁咒。</p>
     <p>这是曾经帝国的手也想使用菲利克斯的洗脑魔法。</p>
     <p>虽然梅赛德斯自身还不能使用，但是对汉娜来说，能够准备使用者的程度吧。</p>
     <p>那么用那个术洗脑beartix做为手驹子就行了。</p>
