--- a/OEBPS/Text/c084.xhtml
+++ b/OEBPS/Text/c084.xhtml
@@ -91,7 +91,7 @@
     <p>“这是一个很有趣的故事。可是我不知道我打招呼的理由”</p>
     <p>“这是个简单的话题。因为不想转给敌人。</p>
     <p>刚才的愚王……我知道当你把伊扎克从宝座上拉下时，你和父亲都很活跃。</p>
-    <p>我不认为与拥有那样力量，与王一起排列的发言力的格鲁内瓦尔特家为敌转动是聪明的事。</p>
+    <p>我不认为与拥有那样力量，与王一起排列的发言力的格鲁内瓦特家为敌转动是聪明的事。</p>
     <p>所以我希望你们跟着我。</p>
     <p>如果你们成为同伴的话，就等于得到万军了。当然，真正的国王就任这个国家的宝座之后，也保证你的立场吧」</p>
     <p>原来如此。梅赛德斯想，目标是父亲，而不是自己。</p>
