--- a/OEBPS/Text/c086.xhtml
+++ b/OEBPS/Text/c086.xhtml
@@ -88,7 +88,7 @@
     <p>梅赛德斯就是这样一个不安的思考。</p>
     <p>可是那个时机，什么人从外边敲了门。</p>
     <p>“是谁呢？现在是谈话的时候”</p>
-    <p>“我是商人的三条狗。听说有梅赛德斯先生，请务必让我跟他讲话……”</p>
+    <p>“我是商人的トライヌ。听说有梅赛德斯先生，请务必让我跟他讲话……”</p>
     <p>从门那边传来的是熟人的商人的声音。</p>
     <p>他就是曾经潜入迷宫时得到救助，通过教授巧克力和罐头制作方法而给梅赛德斯带来财富的小胖商人——三轮车。</p>
     <p>为了确认罗勒的视线，我点了点头。</p>
@@ -97,10 +97,10 @@
     <p>“呵呵，好久不见了，梅赛德斯大人。成长得越发美丽…………啊，不，好像还是很年轻的样子”</p>
     <p>“不要勉强说恭维话。我自己知道自己没有成长”</p>
     <p>恭维是商谈的基本。</p>
-    <p>大概是Trine也打算先从恭维入手吧，但是梅赛德斯因为从当时开始就几乎没有变化所以以空手道而告终。</p>
+    <p>大概是トライヌ也打算先从恭维入手吧，但是梅赛德斯因为从当时开始就几乎没有变化所以以空手道而告终。</p>
     <p>吸血鬼的不老期真是不公平。既有像弗雷德里克一样衰老的人，也有像梅赛德斯和汉娜那样年幼地停止的人。</p>
     <p>也有像菲利克斯一样在肉体高峰的20岁时停止的事，也有像奇克林顿一样不成熟的绝妙的年龄停止的事。　</p>
-    <p>并且triu在外观上是中年父亲。这个要说是哪个的话也是拉了偏离的部类吧。</p>
+    <p>并且トライヌ在外观上是中年父亲。这个要说是哪个的话也是拉了偏离的部类吧。</p>
     <p>“罗勒殿下，我有些话想和你说，可以出去吗？重要的商谈不想被别人听到”</p>
     <p>“……好吧。那么请保卫”</p>
     <p>“不，不用了。即使没有那样的东西，只要有梅赛德斯殿就没有什么可怕的东西了”</p>
