--- a/OEBPS/Text/c092.xhtml
+++ b/OEBPS/Text/c092.xhtml
@@ -12,13 +12,13 @@
 <body>
     <h1>92. 情报源捕获</h1>
     <p>梅赛德斯追赶着吹跑的尤利亚，在空中踢了一脚。</p>
-    <p>用风的魔法制造脚手架，踩它在空中也能像地上一样移动。</p>
+    <p>用风的魔法制造立足点，踩它在空中也能像地上一样移动。</p>
     <p>是看了几次尤利亚那个运动，试着模仿的。</p>
-    <p>梅赛德斯平时也踢着天空移动着,不过，天空脚手架没做(制作)。</p>
+    <p>梅赛德斯平时也踢着天空移动着,不过，天空立足点没做(制作)。</p>
     <p>那只是因为踢的反作用在跳。</p>
     <p>但是，这样的话就能比平时更快速的运动了。</p>
     <p>（做法是……这样吗？）</p>
-    <p>在前进方向上设置几个脚手架。</p>
+    <p>在前进方向上设置几个立足点。</p>
     <p>前方右边一个，再前方上方一个。前方有一个。还有尤利亚的背后也是一个。</p>
     <p>决定自己前进的路线，向着创造出的脚手处跳跃。</p>
     <p>着地——虽然不知道是否可以称之为着地，但暂且先作为着地。</p>
