--- a/OEBPS/Text/c093.xhtml
+++ b/OEBPS/Text/c093.xhtml
@@ -84,7 +84,7 @@
     <p>“那下次见。你知道我们的支援者有多少人，是谁吗？</p>
     <p>虽然觉得不会吧，但是如果搞错暗杀的话那就大问题了？”</p>
     <p>“不，就算是我，我也不会做到那种程度！大家好好地都记得哟！</p>
-    <p>听好了，仔细听……首先是三人商会的三人狗吧。然后……”</p>
+    <p>听好了，仔细听……首先是三人商会的トライヌ吧。然后……”</p>
     <p>实在是微不足道。</p>
     <p>梅赛德斯只能惊讶于尤利亚的嘴巴之轻。</p>
     <p>有趣地列举一个接一个协助『真正的王』的选民们的名字。</p>
