--- a/OEBPS/Text/c094.xhtml
+++ b/OEBPS/Text/c094.xhtml
@@ -30,7 +30,7 @@
     <p>没错，菲利克斯是克里斯托夫的孙子。</p>
     <p>也就是说他是迷宫的继承人。</p>
     <p>而且瓦尔堡加知道这件事。</p>
-    <p>正因为如此，把菲利克斯做为正当的格鲁内瓦尔特的继承的事那样拼命。</p>
+    <p>正因为如此，把菲利克斯做为正当的格鲁内瓦特的继承的事那样拼命。</p>
     <p>我不想让被暗杀的父亲走同一条路。希望自己的孩子得到所说的『gurunevarut』确实的自己守护的力量。</p>
     <p>或者，由于自己不是真正的女儿的事经常感到疏远感一样的东西。</p>
     <p>正因为如此，至少对自己的孩子……菲利克斯肯定是自己和伯恩哈特的孩子，希望他能得到与自己不一样的地方。</p>
@@ -83,7 +83,7 @@
     <p>所以隐藏起来安上护卫是必要的吧。</p>
     <p>关于这一点，伯恩哈特的许可应该也有，但他可能已经开始动手了。</p>
     <p>“接下来，先把对方的支援者拉拢过来吧。</p>
-    <p>我觉得有几个人想像三条狗那样脱掉，所以不会那么难”</p>
+    <p>我觉得有几个人想像トライヌ那样脱掉，所以不会那么难”</p>
     <p>要支撑组织，需要支援者。</p>
     <p>如果全部都去掉的话，对方方面的发言力会格外下降。</p>
     <p>既然有迷宫，完全无力化是不可能的，但是不做的话大不一样吧。</p>
