--- a/OEBPS/Text/c095.xhtml
+++ b/OEBPS/Text/c095.xhtml
@@ -13,7 +13,7 @@
     <h1>95.  改善形象</h1>
     <p>“你做了什么？”</p>
     <p>瓦尔堡加夫人的怒声响彻格鲁内瓦特邸的一间房间。</p>
-    <p>被尤利亚巧妙地逃跑了的汉娜就那样去了格鲁内瓦尔特邸，向有关人员一堂报告了事情的始末。</p>
+    <p>被尤利亚巧妙地逃跑了的汉娜就那样去了格鲁内瓦特邸，向有关人员一堂报告了事情的始末。</p>
     <p>克里斯托夫·战斗是地牢所有者的事。</p>
     <p>暗杀克里斯托夫的尼班，匿匿着女儿的事。</p>
     <p>那个女孩就是瓦尔堡加，也就是说菲利克斯是迷宫的继承者。</p>
@@ -70,7 +70,7 @@
     <p>半吊子的家伙最会使事态恶化……这也是梅赛德斯自己对二班同学的感想。</p>
     <p>但是先说结论，这次的失误全都利于梅赛德斯。</p>
     <p>罗勒已经没有时间去介意梅赛德斯了，这样对方的行动也变得容易理解。</p>
-    <p>菲利克斯被袭击的部分吉克林德的安全性增加了，如果再给格鲁内瓦尔特府邸施加袭击的话，也可以和伯尔尼哈特一起击溃。</p>
+    <p>菲利克斯被袭击的部分吉克林德的安全性增加了，如果再给格鲁内瓦特府邸施加袭击的话，也可以和伯尔尼哈特一起击溃。</p>
     <p>另外，如果菲利克斯是继承者的事判明了之后能夺去地牢，应该把菲利克斯作为继任者的想法成为盘石的东西。</p>
     <p>伯恩哈特认为这些都符合梅赛德斯的计算。</p>
     <p>“就是这样的地方，梅赛德斯”</p>
@@ -93,7 +93,7 @@
     <p>什么最糟糕，她就是伯恩哈特的妻子。</p>
     <p>也就是说，如果这个信息是真的……真正的王派将进入。大体上确实结束。</p>
     <p>这里的正当性是迷宫的继承者这样的一点。</p>
-    <p>但是，如果在远高于社会地位的格鲁内瓦尔特家中有能够继承同一个迷宫的人，那么舆论就会以“你当王不就行了吗”而告终。</p>
+    <p>但是，如果在远高于社会地位的格鲁内瓦特家中有能够继承同一个迷宫的人，那么舆论就会以“你当王不就行了吗”而告终。</p>
     <p>哪里都没有必要强行举起比自己年纪小的麦克斯。</p>
     <p>既能成为强王，又不能打破国家。万岁。</p>
     <p>而且是瓦尔堡加的儿子……菲利克斯和克里斯托夫很相似，而且和吉克林德公主也有认识，关系很好。</p>
@@ -101,7 +101,7 @@
     <p>无论怎么想都觉得这边比较好。</p>
     <p>为了避免这一点，只有杀死菲利克斯和瓦尔堡加，如果它公开的话，我们的正当性就会消失。</p>
     <p>虽然说继承了被非法暗杀的克里斯托夫的意愿，但是如果亲手杀害了那个孩子和孙子的话，就只能是奥古斯特·艺术活动的同类了。</p>
-    <p>话虽如此，却没有暴露，穿过格鲁内瓦尔特邸的警备，等同于不可能杀害其本妻和孩子。</p>
+    <p>话虽如此，却没有暴露，穿过格鲁内瓦特邸的警备，等同于不可能杀害其本妻和孩子。</p>
     <p>索性，从现在开始也应该向对方转让地牢吗？</p>
     <p>……不，不行。已经放出了暗杀者。</p>
     <p>不管成败与否，在瞄准贵族生命的时刻已经无法后退了。</p>
