--- a/OEBPS/Text/c098.xhtml
+++ b/OEBPS/Text/c098.xhtml
@@ -51,7 +51,7 @@
     <p>在迷宫外面有人这样说，抓住了迷宫钥匙。</p>
     <p>真没想到，罗勒看了迷宫外面的景色。</p>
     <p>虽然不知道是什么样的结构，但是在迷宫里也能看到外面。当然，如果有主人的许可的话也是这样的。</p>
-    <p>然后他看到的是几天前想拉进这里的格鲁内瓦特家的长女……菲利克斯的妹妹梅赛德斯·格鲁内瓦尔特和她的姑母汉娜的身姿。</p>
+    <p>然后他看到的是几天前想拉进这里的格鲁内瓦特家的长女……菲利克斯的妹妹梅赛德斯·格鲁内瓦特和她的姑母汉娜的身姿。</p>
     <p class="divline"></p>
     <p>在将袭击王都的Heito做成Max之后，梅赛德斯一边从复制的铠甲的魔物那里听到情报一边寻找王都内。</p>
     <p>这个魔物本来就是以一次性使用为前提而放出的，所以并没有什么特别的情报。</p>
