--- a/OEBPS/Text/c101.xhtml
+++ b/OEBPS/Text/c101.xhtml
@@ -22,7 +22,7 @@
     <p>……突然想到。这不是马克斯，是认识的对象……譬如是妹妹的玛吉特，自己怎样想？</p>
     <p>即使是妹妹，也只是“可怜啊”就解决了吧。</p>
     <p>不管怎么说，最近人情味比前世更加浓厚……相反，感觉心越来越冷了。</p>
-    <p>麦克斯所持有的地牢，与过去愚蠢的国王的罪一起出处变得清楚，那个继承权在菲利克斯·格鲁内瓦尔特的事也被明确了。</p>
+    <p>麦克斯所持有的地牢，与过去愚蠢的国王的罪一起出处变得清楚，那个继承权在菲利克斯·格鲁内瓦特的事也被明确了。</p>
     <p>此后谈话顺利地进行着，一转眼地吉克林德和菲利克斯成为了婚约者的关系。</p>
     <p>拥有迷宫的人……而且是男人，能力也是无可挑剔的。</p>
     <p>菲利克斯和吉克林德结为婚姻是理所当然的事情。</p>
@@ -33,7 +33,7 @@
     <p>那么之后两个人加深关系，互相喜欢就好。</p>
     <p>在新国王的候补（或者说大体上确定）的登场，国家沸腾中，梅赛德斯得到了特别许可前往了城堡的地下。</p>
     <p>在那里由于此次的事罗勒方面支持的贵族和商人被囚禁，接受着情况听取。</p>
-    <p>说点题外话，没有三条狗。他早一步脱离了真正的王派，通过梅赛德斯提供情报，最终无罪释放。</p>
+    <p>说点题外话，没有トライヌ。他早一步脱离了真正的王派，通过梅赛德斯提供情报，最终无罪释放。</p>
     <p>真是个善于处世的男人。</p>
     <p>「啊，梅露。这里”</p>
     <p>一进监狱，汉娜就顶住许多部下冲了过来。</p>
