--- a/OEBPS/Text/c104.xhtml
+++ b/OEBPS/Text/c104.xhtml
@@ -19,7 +19,7 @@
     <p>梅赛德斯来到行会的理由是为了采取单独行动。 这次，学校承认了作为特别学生有几个人来到这个村落，那里还是学生。有义务组队进行团体行动。 但是，如果像梅赛德斯那样，在已经积累了实际业绩的基础上接受行会的委托的话，就不是学生了，也可以作为救援车来行动。</p>
     <p>（只有吸血鬼啊……当然了。） 这个建筑物是精灵和吸血鬼共用的，但现在是深夜。 作为吸血鬼生活着的话快要忘记了,不过，所谓夜晚本来不是应该活动的时间带。 所以行会中只有吸血鬼，看不到精灵的身影。 反过来如果这个成为正午，这次吸血鬼的身姿消失成为只elfe吧。</p>
     <p>如果明早和傍晚的话，说不定哪一个种族也在。 仔细一看，接待处边站着一个精灵的男人，看起来很丢脸。 这个时间段从迷宫回来的精灵也不是没有来行会的可能性，为了那个时候被留下。 “那么……你适当地接受几个委托？” 首先，梅赛德斯前往论坛，浏览了张贴在那里的委托书。</p>
-    <p>委托既有行会出示的东西，也有同样的标签出示的情况。 想要收集到手很麻烦的魔物素材的时候，saker-但是向其他的纸箱提出请求也不是什么稀奇的事情。 那倒不错……梅赛德斯看到委托书中的一本后，发现了一件奇怪的事情。 文字和自己平时使用的不一样，是用精灵语写的。</p>
+    <p>委托既有行会出示的东西，也有同样的标签出示的情况。 想要收集到手很麻烦的魔物素材的时候，saker-但是向其他的saker提出请求也不是什么稀奇的事情。 那倒不错……梅赛德斯看到委托书中的一本后，发现了一件奇怪的事情。 文字和自己平时使用的不一样，是用精灵语写的。</p>
     <p>【皮琼斯捕获请求】</p>
     <p>委托人：卡尔</p>
     <p>报酬金额：5000条规则</p>
@@ -27,7 +27,7 @@
     <p>详情：希望能尽快抓住天空迷宫中出现的皮琼。</p>
     <p>……天空迷宫是什么？</p>
     <p>完全不记得的名字，这个村落里的迷宫的名字应该是《古伦萨迷宫》。</p>
-    <p>而且单价也不同。规则？这个世界的钱应该是青蛙……。</p>
+    <p>而且单价也不同。规则？这个世界的钱应该是Elka……。</p>
     <p>梅赛德斯向路过附近的行会职员打招呼。</p>
     <p>“这个委托书是精灵出的吗？”</p>
     <p>“是的。他们把格伦萨迷宫叫做天空迷宫。我不懂你的意思。</p>
@@ -43,7 +43,7 @@
     <p>再看委托书的话，注意到吸血鬼，Elfel不问胡乱pijon的捕获委托多的事。</p>
     <p>什么，有那么受欢迎吗？皮琼。</p>
     <p>总之，梅赛德斯拿着1层和2层的映射请求和捕获皮琼斯的委托书排在了接待前的队伍里。</p>
-    <p>于是，留下幼小的外表停止了成长的梅赛德斯显眼吗，周围的赛车象侮辱一样地看了她。</p>
+    <p>于是，留下幼小的外表停止了成长的梅赛德斯显眼吗，周围的saker象侮辱一样地看了她。</p>
     <p>“喂喂，这样的地方有小鬼。”</p>
     <p>“算了吧，小姐，这里可不是像你这样的孩子来玩的地方。”</p>
     <p>“哈哈哈，你没见过的小鬼不要回家！妈妈也很担心吧？</p>
