--- a/OEBPS/Text/c108.xhtml
+++ b/OEBPS/Text/c108.xhtml
@@ -13,7 +13,7 @@
     <h1>108.  没有被评价的才能</h1>
     <p>暂时离开迷宫的梅赛德斯前往行会，报告了达成委托的事情。</p>
     <p>因为捕获了的皮琼也交给了接待处，过一会经受理应该到达委托人的地方。</p>
-    <p>委托人和纸箱之间不直接交换是行会所决定的规则，除了需要详细商谈以外，基本上委托人和接受方不会碰面。</p>
+    <p>委托人和saker之间不直接交换是行会所决定的规则，除了需要详细商谈以外，基本上委托人和接受方不会碰面。</p>
     <p>据说这是为了避免纠纷，过去在完成委托后有种种挑剔，没有支付最初提出的委托费的人。</p>
     <p>从那里发展成为暴力事件，时候也有死人的事。</p>
     <p>为了避免这种愚蠢的纠纷，行会也进入了行会，决定在规定的规则上进行对话。</p>
