--- a/OEBPS/Text/c112.xhtml
+++ b/OEBPS/Text/c112.xhtml
@@ -16,7 +16,7 @@
     <p>梅赛德斯用皮可，莱斯利乘着皮琼斯驶向船只。</p>
     <p>不管怎样都无所谓，这只皮琼斯到底想跟到哪里来呢？</p>
     <p>他们平安登上船，一边警戒圈套一边谨慎地前进。</p>
-    <p>与空中场景不同，这里有普通的脚手架。</p>
+    <p>与空中场景不同，这里有普通的立足点。</p>
     <p>正因为如此，必须注意踏的事发动的圈套的存在。</p>
     <p>至今为止一直处于不稳定的空中突然一变，（虽说是在船中）脚跟着地面，从心情上来说，也感到安心，警戒好像要松懈了。所以才危险。</p>
     <p>更应该警惕的是船的摇晃。梅赛德斯认为，这并不能保证船不会突然发生太大的摇晃，而是比刚才更危险的区域。</p>
