--- a/OEBPS/Text/c115.xhtml
+++ b/OEBPS/Text/c115.xhtml
@@ -93,7 +93,7 @@
     <p>而且公爵是父亲，我自己并没有什么了不起的”</p>
     <p>“不，但是……”</p>
     <p>“别在意，和以前一样对待我就好了。”</p>
-    <p>对梅赛德斯来说，格鲁内瓦尔特之名并没有那么有价值。</p>
+    <p>对梅赛德斯来说，格鲁内瓦特之名并没有那么有价值。</p>
     <p>与其这么说，不如说清楚地说是一种负担，这是真心话。</p>
     <p>她完全没有继承家业的意思，家业是无论如何都想强加给菲利克斯的行李。</p>
     <p>而且，反正在不远的未来吸血鬼和精灵也不会在意彼此家的等级了吧。</p>
