--- a/OEBPS/Text/c121.xhtml
+++ b/OEBPS/Text/c121.xhtml
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>121.  决斗的骚动</h1>
+    <h1>121. 决斗的骚动</h1>
     <p>那是莱斯利的帐篷馒：烧前5分钟左右的事。</p>
     <p>格拉西兰入侵了莱斯利的帐篷。</p>
     <p>他带着扭曲的表情烧着帐篷，但是令他担心的是帐篷里的贵重物品……比如说，万一混入了平时很少出现的魔石、米歇尔子爵家的传家宝等就麻烦了。</p>
@@ -26,8 +26,64 @@
     <p>「……哼”</p>
     <p>看着书稍微思考了一下，格拉西兰把那本书放到了怀里。</p>
     <p>因为莱斯利如此执着，所以可能是有历史价值的资料。</p>
-    <p>出于这种想法，他选择了只留下那本书。</p>
-    <p><span class="textmissing">[[丢失]]370</span></p>
+    <p>出于这种想法，他选择了只留下那本书。</p>◆
+
+
+
+    <p>　メルセデスがレスリーを伴ってエルフェの集落へ行くと、既に火は消火された後であった。</p>
+    <p>　流石は魔法に長けたエルフェといったところか。水の魔法や氷の魔法で見事に鎮火に成功している。</p>
+    <p>　煙一つ残っていない焼け跡には、レスリーの造った道具の成れの果てが、焦げた鉄屑として転がっていた。</p>
+    <p>　レスリーは流石にショックを受けているようだが、一番大事な本は無事だったので（正確には無事ではなかったのだが）一応僅かなりとも心の余裕はあるようだ。</p>
+    <p>　とはいえショックはショックで、乾いた笑いを浮かべている。</p>
+    <p>「あはは……どうしよ……全部燃えちゃった」</p>
+    <p>「残っているものはないのか？」</p>
+    <p>「一応、ダンジョン攻略用に持ち歩いてたマスケット銃と、ウォータージェットは無事だけど、後は全滅……あ、でも、弾丸と水の魔石はテントの中だったからマスケット銃とウォータージェットも使えないや……一応、今充填してる分の魔石と弾丸だけはあるけど……」
+    </p>
+    <p>「かろうじて実用的な二つが残ったのは不幸中の幸いか」</p>
+    <p>　レスリーの発明はほぼ燃えてしまったが、彼女が普段から身に付けているものだけは不幸を免れたようだ。</p>
+    <p>　だが、他の道具も決して悪かったわけではない。</p>
+    <p>　今の世の中では評価されにくいだろうし、的を外していたがどれも間違いなく価値のある道具だったのだ。</p>
+    <p>　少なくとも、火を点けた阿呆よりは間違いなく価値があったとメルセデスは断じる事が出来る。</p>
+    <p>「おやおやあ？　これは何の集まりだ？」</p>
+    <p>　おっと、火を点けた阿呆（仮）のご登場だ。</p>
+    <p>　グラシアンはニヤニヤと笑いながら、毎度の如く取り巻きを引き連れてやってきた。</p>
+    <p>　その後ろにいる取り巻きは、気のせいか疲れたような顔をしている。</p>
+    <p>　間抜けな主を持つと苦労するという事か。メルセデスは少しだけ彼等に同情した。</p>
+    <p>「ユリア、あいつか？」</p>
+    <p>「はっ。間違い………………間違いございません」</p>
+    <p>　メルセデスが名前を呼ぶと、影のようにユリアがメルセデスの背後に立ち、主の問いに肯定を返した。</p>
+    <p>　しかし返事をするまでにかなり間があったので、思い出すのに苦心したのだろう。</p>
+    <p>　まあ思い出せただけユリアにしては上出来と思うしかない。</p>
+    <p>　そして答えた後は霞のように消え去り、痕跡も残さない。</p>
+    <p>　本当に腕だけは申し分ない……腕だけは……。</p>
+    <p>　ともかく、これで犯人確定だ。</p>
+    <p>　しかし証拠がないのでは、ここで追求しても意味がない。</p>
+    <p>　確たる証拠か証言が必要だ。</p>
+    <p>　ユリアならば証拠くらい簡単に入手出来ただろうが、残念ながら証拠の入手までは命じていないのでこれも期待は出来ない。</p>
+    <p>　というより、ユリアにあまり複数の命令を出してしまうと、どれかを忘れてしまう可能性が高いし、何が証拠になるかの判別も出来なさそうだ。</p>
+    <p>　まあ、犯人で確定したならば証拠の有無などは別にいい。何も司法の場に出して正式に裁いてもらおうというのではないのだ。</p>
+    <p>　ただの害虫処分に万人が認める証拠も証言も必要あるまい。</p>
+    <p>「ほう、レスリーのテントが燃えたのか。ははっ、丁度よかったじゃないか。</p>
+    <p>ゴミを処分する手間が省けたじゃねえか」</p>
+    <p>「ゴミですって！？」</p>
+    <p>「おお、ゴミだろうよ。何に使うのかも分からん鉄屑ばっか造りやがって。燃えちまった方が世の中の為だ」</p>
+    <p>　グラシアンはレスリーを嘲るように言い、彼女の怒りを煽る。</p>
+    <p>　だがメルセデスは彼を無視して焼け跡に行き、まだ使える物が残っていないかを確認する事にした。</p>
+    <p>　アレは後で処分するが、今は人の目があるから放置しておいた方がいい。</p>
+    <p>　それならばまだ、グラシアンの話などを聞いているよりは焼け跡からサルベージする方が時間の無駄ではないと思ったのだ。</p>
+    <p>　レスリーもそれに続き、二人はグラシアンを放置したまま焼け跡を漁る。</p>
+    <p>　まだ腹は立てているようだが、アレを相手にしてもストレスが溜まるだけだと学習したようだ。</p>
+    <p>「これはどうだ？　見た感じ大丈夫そうだが」</p>
+    <p>「あー、駄目ね……中がやられちゃってるわ。こっちの照明器具は……うん、駄目ね」</p>
+    <p>「お、おい……」</p>
+    <p>　グラシアンの思っていた反応と違ったのだろう。</p>
+    <p>　ゴソゴソと焼け跡を漁るレスリーに、困惑したような声をかける。</p>
+    <p>　だが無視だ。レスリーは振り返りもせずに焼け跡を探す。</p>
+    <p>　使えそうなものは……残念ながら残っていないようだ。</p>
+    <p>「おー、俺達も手伝うよ」</p>
+    <p>「何か残ってるといいねえ」</p>
+    <p>「こう言っちゃ誤解されるかもしれないけど、燃えたのが物だけでよかったよ。怪我がなくて何よりだ」</p>
+    <p>「おい……待てよ……何だよ、その反応は……」</p>
     <p>周围的人也积极地来帮忙，大家一起寻找废墟。</p>
     <p>把快坏了的东西搬出去，把坏了的东西融化后还能作为铁使用的东西分开。</p>
     <p>回过神来，只留下格兰西和周围的人，大家一起哇哇地收拾着废墟。</p>
@@ -77,6 +133,7 @@
     <p>凭气势挑战决斗是好事，但关键的胜算没有。</p>
     <p>事后才注意到这件事，莱斯利脸色发青。</p>
     <p>“怎、怎么办……”</p>
-    
-    <p><span class="textmissing">[[丢失]]373</span></p>
+    <p class="divline"></p>
+    <p>メルセデス「まあ、マスケット銃があるなら開幕ヘッドショットでいけるな」</p>
+    <p>レスリー「！？」</p>
 </body>
