--- a/OEBPS/Text/c123.xhtml
+++ b/OEBPS/Text/c123.xhtml
@@ -57,7 +57,7 @@
     <p>准备在病床附近睡觉。</p>
     <p>这两个魔物可以说是梅赛德斯的主力，但这次的迷宫攻略——也就是说在和守护者的战斗中没有出场机会。</p>
     <p>从至今为止的构造来看，可以认为首先是十有八九的空战。</p>
-    <p>如果有脚手架的话，敏捷的小黑还能从脚手架飞到脚手架上，这一点也不是不能战斗，但是如果立足点没有的可能性的话，梅赛德斯认为这次还是一开始就可以飞的成员来挑战比较好。</p>
+    <p>如果有立足点的话，敏捷的小黑还能从立足点飞到立足点上，这一点也不是不能战斗，但是如果立足点没有的可能性的话，梅赛德斯认为这次还是一开始就可以飞的成员来挑战比较好。</p>
     <p>至于本凯，很遗憾没有讨论的必要……身为重战士的他在这次战场上什么也做不了。竭尽全力射箭的程度是吗。</p>
     <p>即使是放在桃子上运用，开销也太重了。</p>
     <p>如果能再加上新的防御，那就太好了。</p>
