--- a/OEBPS/Text/c008.xhtml
+++ b/OEBPS/Text/c008.xhtml
@@ -15,15 +15,15 @@
     <p>岂止如此，他跪着接受死亡，伸出头来。</p>
     <p>这简直就像是服从主君的臣下，让梅赛德斯感到困惑。</p>
     <p>“真干净啊。虽说是我赢了，但没想到完全没有反抗”</p>
-    <p>“我们有机族只有强大才是唯一的绝对的法律。我们对于胜利者将竭尽敬意和忠诚。</p>
+    <p>“我们奥加族只有强大才是唯一的绝对的法律。我们对于胜利者将竭尽敬意和忠诚。</p>
     <p>你是胜利者。所以我有喜欢我的权利……当然，杀人的权利也是有的。</p>
     <p>我将殉我族之法」</p>
-    <p>梅赛德斯毫不疏忽大意，在头脑中回味着有机的语言。</p>
-    <p>那么说来，确实，关于有机的书有那样的记述的感觉。</p>
-    <p>“虽然OGA是危险的魔物，但如果OGA能够一对一地打倒它，那么他会成为一生都不会背叛的忠实的仆人吧”。</p>
+    <p>梅赛德斯毫不疏忽大意，在头脑中回味着奥加的语言。</p>
+    <p>那么说来，确实，关于奥加的书有那样的记述的感觉。</p>
+    <p>“虽然奥加是危险的魔物，但如果奥加能够一对一地打倒它，那么他会成为一生都不会背叛的忠实的仆人吧”。</p>
     <p>而且，书上还这样写着。</p>
-    <p>但是，OGA竭尽忠诚一生中只有一个人。第一次以一对一输掉的对手被认定为主，那个忠诚以后绝对不变动。</p>
-    <p>因此，即使OGA获胜，如果OGA已经有主，就不能成为胜者。”</p>
+    <p>但是，奥加竭尽忠诚一生中只有一个人。第一次以一对一输掉的对手被认定为主，那个忠诚以后绝对不变动。</p>
+    <p>因此，即使奥加获胜，如果奥加已经有主，就不能成为胜者。”</p>
     <p>（……也许是捡到的东西吧）</p>
     <p>从别人口中说出的忠诚完全不值得信任。人为了欲望会马上背叛。</p>
     <p>但是，梅塞德斯认为，如果是被本能所支撑的魔物的忠诚，值得一想。</p>
@@ -51,21 +51,21 @@
     <p>身体瘦弱，简直像骨头一样。</p>
     <p>看得出已经好几天没吃了。</p>
     <p>“看起来像是商人雇用的护卫……虽然护卫已经全灭了”</p>
-    <p>“哈，是的……如您所知，我在经营商会。叫做三角商会……您知道吗？</p>
+    <p>“哈，是的……如您所知，我在经营商会。叫做トライヌ商会……您知道吗？</p>
     <p>“你什么都知道，这不是这个国家屈指可数的大商会吗？”</p>
-    <p>三角商会……以大城市蓝调为据点的吸血鬼之国也是屈指可数的大商会。</p>
-    <p>前几天梅赛德斯购物的大型杂货店也是Triu商会的东西。</p>
+    <p>トライヌ商会……以大城市蓝调为据点的吸血鬼之国也是屈指可数的大商会。</p>
+    <p>前几天梅赛德斯购物的大型杂货店也是トライヌ商会的东西。</p>
     <p>如果他说的是真的，那么他就是那个大商会的会长。</p>
     <p>那样的大物是什么，在这样的迷宫快要死了。</p>
     <p>“发生了什么？”</p>
-    <p>“我们商会近年来正在被其他商会超越……于是，听说称霸迷宫的人可以获得巨万的财富，于是在城市里也雇用了屈指可数的寻客开始称霸这个迷宫”</p>
+    <p>“我们商会近年来正在被其他商会超越……于是，听说称霸迷宫的人可以获得巨万的财富，于是在城市里也雇用了屈指可数的saker开始称霸这个迷宫”</p>
     <p>攻占迷宫的人将获得财富。</p>
     <p>这是在saker他们之间流传的童话般的梦幻故事。</p>
     <p>实际上，也有过去称霸了迷宫的saker带回了宝石和金银财宝这样的例子，不一定是眉唾物。</p>
     <p>海报们相信迷宫的深处有宝山在沉睡。</p>
-    <p>“我雇了三支B级别的著名帆船。</p>
+    <p>“我雇了三支B级别的著名saker。</p>
     <p>三者都是四人组成，拥有确实的成绩和经验”</p>
-    <p>B等级可以说是普通雇佣的求婚者最好的等级。</p>
+    <p>B等级可以说是普通雇佣的saker最好的等级。</p>
     <p>这个以上的A等级几乎都是国家和贵族的专属，优先接受上级的委托，所以即使是大商人也不能轻易雇佣。</p>
     <p>因此是B等级，并且他不着眼于钱雇佣三队，共计十二人开始了地牢的攻略。</p>
     <p>“到中途还顺利……可是，从越过十层的附近魔物的强度跳起，尽管如此想办法到达了到最下层,不过，那个是错误。</p>
@@ -84,32 +84,32 @@
     <p>是的，瓶子容易损坏，不适合长期保存和搬运。因此罐头登场了。</p>
     <p>“我们一边和饥饿作斗争，一边拼命向上攀登。</p>
     <p>然后终于回到了这里……有从最底层追赶我们的魔物”</p>
-    <p>“那是那个有机吗？”</p>
-    <p>“是的……被本来就很强的有机，削弱了的纸巾们没有完成的策略也做了。</p>
+    <p>“那是那个奥加吗？”</p>
+    <p>“是的……被本来就很强的奥加，削弱了的纸巾们没有完成的策略也做了。</p>
     <p>如果你不来的话，我现在也变成尸体了吧”</p>
-    <p>十二个赛车全灭了。听了那个话，梅赛德斯认识到了增加伙伴的重要性。</p>
-    <p>从这个意义上来说，打倒那个有机器是运气好吧。</p>
+    <p>十二个saker全灭了。听了那个话，梅赛德斯认识到了增加伙伴的重要性。</p>
+    <p>从这个意义上来说，打倒那个奥加是运气好吧。</p>
     <p>那个恐怕是最下层也弱的部类,不过，尽管如此应该成为战斗力。</p>
     <p>“先回到地上吧。我陪你去。</p>
-    <p>还有……那里的OGA，名字是？”</p>
+    <p>还有……那里的奥加，名字是？”</p>
     <p>“没有名字。请随意叫我”</p>
     <p>突然叫你喜欢我也很为难。</p>
     <p>梅赛德斯想，这是自己必须命名的潮流吗？</p>
     <p>首先想到的是阿修拉，因为原本就是阿修拉种的有加，所以太便宜了。</p>
-    <p>（怎么回事呢？拥有很多武器的有机吗……武器很多……。</p>
+    <p>（怎么回事呢？拥有很多武器的奥加吗……武器很多……。</p>
     <p>你不要无意中想起武藏坊弁庆）</p>
     <p>梅赛德思量了一下，想不出其他好名字，就决定把它命名为。</p>
     <p>拥有许多庞大的武器，意外地觉得很适合这个简单的命名。</p>
     <p>“那么你的名字从现在开始就是Benkey。”</p>
     <p>“本凯……好名字。这个名字，我确实记住了”</p>
-    <p>「好，本凯。把倒在那里的贴纸车搬过来”</p>
+    <p>「好，本凯。把倒在那里的saker搬过来”</p>
     <p>他们已经死了，但至少想让他们回到地上。</p>
     <p>这样想的梅赛德斯决定让奥加——本凯运送尸体。</p>
     <p>saker他们大概也不想被送到杀死自己的本人那里吧，但比起在这种地方遗体腐朽，应该要好些。</p>
     <p>“站起来吗？嗯……”</p>
-    <p>“我是三条狗。”</p>
-    <p>“原来是三重奏啊。站不起来的话就借你肩膀”</p>
-    <p>商人的名字好像是triu。在商会上给自己取了名字。</p>
+    <p>“我是トライヌ。”</p>
+    <p>“トライヌ啊。站不起来的话就借你肩膀”</p>
+    <p>商人的名字好像是トライヌ。用自己的名字取的商会名。</p>
     <p>虽然梅赛德斯催促他站起来，但他还是没有站起来的迹象。</p>
     <p>因为逃亡和饥饿，连站立的力量都被他失去了。</p>
     <p>这样下去的话，在到达地面之前会饿死。这样想的梅赛德斯从袋子里拿出了好几个巧克力夹子包装的纸，解开包装。</p>
@@ -126,7 +126,7 @@
     <p>于是，警戒从表情中消失，取而代之的是惊愕。</p>
     <p>“这是……味道不可思议。</p>
     <p>又甜又苦。第一次吃……不，这个味道在哪儿……？”</p>
-    <p>然后，三人狗一个接一个地吃了巧克力，递过来的部分一转眼全部吃光了。</p>
+    <p>然后，トライヌ一个接一个地吃了巧克力，递过来的部分一转眼全部吃光了。</p>
     <p>看来您很满意。</p>
     <p>“那个，那个……”</p>
     <p>“我是梅赛德斯”</p>
