--- a/OEBPS/Text/c010.xhtml
+++ b/OEBPS/Text/c010.xhtml
@@ -29,25 +29,25 @@
     <p>此后二人也没有特别苦战的事，轻松地到十层跑破。出来的魔物几乎没有成为本凯的对手而散落，即使忍耐一发也因为梅赛德斯的追击而轻易倒下。</p>
     <p>然后是十一层。在这里终于遇到了另一个目的灰色的果冻。</p>
     <p>看上去确实是把灰色的果冻做成人形的奇怪的东西。胸中有球体，即使不喜欢也会引人注目。</p>
-    <p>“普鲁普尔，是我不好的果冻。”</p>
+    <p>“普鲁普尔，我是坏果冻。”</p>
     <p>“那就不要客气了”</p>
     <p>一登场就被梅赛德斯的刀刃切断了果冻。</p>
     <p>马上果冻打算再生,不过，砍球体的话发呆不动了。</p>
-    <p>“我明白了为什么那个核心是弱点……”</p>
+    <p>“为什么知道那个核心是弱点……”</p>
     <p>「嘛，这类魔物的规定。不要和果冻说话”</p>
     <p>这么易懂地预先暴露弱点为何什么都没有。</p>
     <p>梅赛德斯将不再动弹的果冻装入随身携带的袋子里。</p>
     <p>意外地手感很好地，粘不上。</p>
     <p>尽管如此，提出这个委托的确是甜品店，难道是吃吗？</p>
     <p>“那么，这样的话就可以完成委托了……好不容易。就这样到十二层去」</p>
-    <p>“不要去捕捉施瓦尔茨·沃尔夫范拳”</p>
-    <p>「啊。所以今天撤退”</p>
-    <p>超过十层后，流石和魔物的强度也进一步上升，一些忍受着本凯的初击的人也开始出现。</p>
-    <p>虽然那么说，还不是苦战的水平。光是Benkei就可以轻松取胜吧。</p>
+    <p>“要去捕捉施瓦尔茨·沃尔夫范拳吗”</p>
+    <p>「啊。今天做完这个就撤退”</p>
+    <p>超过十层后魔物的强度也进一步上升，一些能忍受着本凯的初击的人也开始出现。</p>
+    <p>虽然那么说，还不是苦战的水平。光是本凯就可以轻松取胜吧。</p>
     <p>几乎不费力地到达十二阶层，寻找目的之狼。</p>
     <p>稍微徘徊的话，与狼男遭遇了虽然是遗憾但是稍微不同。</p>
     <p>“瓦拉沃尔夫·罗特……拥有像火焰一样的凶猛和吐出火焰的力量的狼男。</p>
-    <p>太厉害了，请小心”</p>
+    <p>很厉害，请小心”</p>
     <p>「火焰啊。正好，是我不能使用的力量。</p>
     <p>把这个东西抓住吧」</p>
     <p>眼前猛烈的狼男身高190cm左右。</p>
@@ -56,7 +56,7 @@
     <p>但是与此同时，感觉到有什么东西从迷宫深处突击而来的迹象，梅赛德斯和本凯马上回避了。</p>
     <p>只有没有反应的保罗夫·罗托受到了什么突击，溅起血飞沫上半身消失。</p>
     <p>二人回头看，在那里的是狼人的上半身被切断的黑色巨狼的身姿。</p>
-    <p>“这是什么时候？”</p>
+    <p>“这家伙吗？”</p>
     <p>“是的，没错。”</p>
     <p>听到本凯的回信，梅赛德斯露出了笑容。</p>
     <p>从目的地来，省去寻找的工夫。</p>
@@ -95,4 +95,55 @@
     <p>梅赛德斯满足地抚摸着那样的黑狼。</p>
     <p>「好，我回地上去。要好好地教训一下这家伙”</p>
     <p>就这样，让黑狼安然长大的梅赛德斯，就那样带回了黑狼。</p>
+    <p>◆</p>
+    <p>带着黑狼回来的梅赛德斯，首先从让黑狼相信自己开始了。</p>
+    <p>如果告诉上下关系的话，下一次就建立信赖关系。基本的教育。</p>
+    <p>另外，因为一直都很难叫到无名氏，所以给它起了个名字叫小黑。</p>
+    <p>一开始觉得施瓦尔茨也不错，但种族名是施瓦尔茨・沃夫格，却给施瓦茨起了个名字，这就等同于给霍莫·萨皮恩斯取个名字。</p>
+    <p>名字好像是忘记带着百万吨硬币从桥上掉下来的样子。</p>
+    <p>所以梅赛德斯并没有特别想好名字于是命名为小黑了。</p>
+    <p>施瓦茨和小黑的意思是一样的。虽然也不是不觉得发音一下子变得可爱了，但是不能和用圆珠笔也能成为库格尔施莱巴这种决战兵器名字的国家的语言相比。</p>
+    <p>说点题外话，本凯和小黑却意外地被母亲和奶奶所接受。</p>
+    <p>为了不让母亲害怕，让他在自己的房间里待命，不知母亲在想什么，晚饭的时候让她带着本凯和小黑来，就这样普通地吃饭了。</p>
+    <p>到底是梅赛德斯的母亲吗。胆量不一般。</p>
+    <p>トライヌ商会马上开始巧克力和罐头的销售，进行着大规模的宣传。</p>
+    <p>巧克力作为应急食品，单纯因为其甜度而大受欢迎，卖得飞快。</p>
+    <p>罐头虽然很好，但是和巧克力相比，销路很朴素。</p>
+    <p>但是，它作为不腐烂、长期携带的食品而备受瞩目，销量也在一点点增长，所以今后也会这样吧。</p>
+    <p>这是相当多的钱。</p>
+    <p>如果顺利的话，买比现在住的地方更豪华的房子也不错。</p>
+    <p>干脆让母亲和祖母从这个城市逃出来，在别的城市开始新的人生，支援他们也不失为一种手段。</p>
+    <p>虽然没见过父亲，但反正不是个好男人。</p>
+    <p>为了这样的男人而断送人生实在是太可怜了。</p>
+    <p>幸好妈妈看起来还很年轻很漂亮。从现在开始重新开始也不是不可能的吧。</p>
+    <p>如果能让母亲和祖母逃离这个城市，首先要达成最初的目标……也就是说，达成了从底部逃脱的目标。</p>
+    <p>那样的话，梅赛德斯也能朝着下一个目标迈进吧。</p>
+    <p>决定了如果在腐烂之前结束。决定继续走下去。</p>
+    <p>决定了不后悔的生活方式，最后笑着死去。</p>
+    <p>但是并不是具体决定了想怎么做，连好容易走到的地方也看不见。</p>
+    <p>漠然地，只想留下活着的证明。但是那个方法和将来都没有考虑。因为现在首先只考虑脱离这个生活，光是这样就已经忙得不可开交了。</p>
+    <p>想去“什么地方”。但是自己也不知道那是哪里。</p>
+    <p>不，根本就不知道有没有那样的地方。也许没有。</p>
+    <p>即使那样也不想停下来。</p>
+    <p>即使道路的前方是黑暗的，我也不想止步后悔而死。</p>
+    <p>——没有看到满月，结束了无聊的一生。</p>
+    <p>梅赛德斯强烈地思考着。</p>
+    <p>我和前世不同，是不同的存在。只是继承了记忆的他人。</p>
+    <p>正因为我想如此坚强，所以才不选择和前世相同的道路。</p>
+    <p>我不想做同样的死法。不想抱同样的后悔。</p>
+    <p>所以要走……与前世不同，寻找属于自己的路。即使不知道那个在哪里。</p>
+    <p>（如果让妈妈和老婆婆脱离了这个生活，接下来就要找目标了。</p>
+    <p>我生存的理由……该走的路……最终找到它）</p>
+    <p>说是全力跑过去</p>
+    <p>不知道怎么走。</p>
+    <p>所以先找那个吧。走自己的路，走到终点的时候会笑的。</p>
+    <p>但是事情总是进展不顺利。</p>
+    <p>下定决心的第二天……有着相同境遇的兄弟们接触</p>
+    <p>梅赛德斯也没想到会发生那么坏的事情。</p>
+    <p>Q、是怎么带着本凯和小黑去迷宫和街道的？</p>
+    <p>1、首先拿起本凯。</p>
+    <p>2、施加重力阻断魔法投掷。</p>
+    <p>3、梅赛德斯乘小黑。</p>
+    <p>4、小黑跳跃本凯乘上</p>
+    <p>5、超现实主义</p>
 </body>
