--- a/OEBPS/Text/c018.xhtml
+++ b/OEBPS/Text/c018.xhtml
@@ -95,7 +95,7 @@
     <p>“相当先进啊。干得好。</p>
     <p>我本来打算每次记一个字就给她一块……给你三张吧」</p>
     <p>巧克力现在在有钱人中间很受欢迎。</p>
-    <p>那个价格由于受欢迎持续上升，现在一张超过2万青蛙。</p>
+    <p>那个价格由于受欢迎持续上升，现在一张超过2万Elka。</p>
     <p>对于花了这么多钱买了巧克力的有钱人来说，这个奖励太贵了吧。</p>
     <p>但是，在梅赛德斯本人看来，这只是递给100日元的板状巧克力板以下的东西的感觉。</p>
     <p>但是由于这个奖励，马尔吉特的干劲一下子提高了，结果学习顺利的进行了。</p>
@@ -113,7 +113,7 @@
     <p>因此问了告诉理由理所当然的事,不过，因为随从的士兵一边叫无礼一边拔出了剑判断为敌人交战。</p>
     <p>双手双脚折断，剑和铠甲破坏，无法战斗，等待主人归来……好像是这么回事。</p>
     <p>“噢，等一下，梅赛德斯！我们不是敌人！</p>
-    <p>我们是格鲁内瓦尔特家的使者！我这次是来送请柬的」</p>
+    <p>我们是格鲁内瓦特家的使者！我这次是来送请柬的」</p>
     <p>“格鲁内瓦特……？啊，原来是本妻孩子的生日会啊”</p>
     <p>「し、知っていたですか」</p>
     <p>“嘛，发生了很多呢。”</p>
@@ -142,7 +142,7 @@
     <p>“你们受的伤，就让他们在坡道上摔倒吧。”</p>
     <p>返回本邸的归途。</p>
     <p>在摇晃的马车中，男人命令士兵们这样做。</p>
-    <p>从格鲁内瓦尔特那里接到请柬的这个男人，是侍奉伯恩哈特爵士的管家。</p>
+    <p>从格鲁内瓦特那里接到请柬的这个男人，是侍奉伯恩哈特爵士的管家。</p>
     <p>他邀请了这次侧室的孩子们参加的派对……我没想到借这个名字的闹剧。</p>
     <p>作为本妻的孩子接受了英才教育的菲利克斯·格鲁内瓦特和被放置在隔壁的孩子们……即使这样战斗，菲利克斯也肯定会赢。</p>
     <p>总之，侧室的孩子们只是作为垫脚石被邀请了。</p>
@@ -154,7 +154,7 @@
     <p>说不定会发生意外的事态。</p>
     <p>也许菲利克斯以为是把踏板叫来，结果招来了意想不到的怪物。</p>
     <p>侍奉梅赛德斯的那两只魔物都不普通。即使有十个士兵合力也赢不了吧。</p>
-    <p>而有机种只会侍奉自己胜利的对手。那么，梅赛德斯的实力和阿加同等吗？</p>
+    <p>而奥加种只会侍奉自己胜利的对手。那么，梅赛德斯的实力和阿加同等吗？</p>
     <p>但最让执事感到恐怖的是梅赛德斯的眼睛。</p>
     <p>冷眼相待。这双眼睛宛如除了自己和家人以外，谁都不相信生物。</p>
     <p>……和父亲伯恩哈特卿的眼神一样。</p>
