--- a/OEBPS/Text/c036.xhtml
+++ b/OEBPS/Text/c036.xhtml
@@ -17,7 +17,7 @@
     <p>对于前世习惯于周七的梅赛德斯来说，这实在是有些不协调感，但因为是这个国家的文化，所以只能接受了。</p>
     <p>太阳在精灵和佛格拉的国家被认为是一周的开始,不过，阳光出来的早上对吸血鬼来说是睡觉的时间。</p>
     <p>因此，这个oruxusu一周的开始是土，阳是休息日。</p>
-    <p>在学园里，阳天也是休息日，梅赛德斯利用这个假期回到了格鲁内瓦尔特府邸。</p>
+    <p>在学园里，阳天也是休息日，梅赛德斯利用这个假期回到了格鲁内瓦特府邸。</p>
     <p>如果以平时的空中短跑能返回轻松,不过，此次因为吉克哈特也在，阿修塔尔请努力了。</p>
     <p>到达房子的吉克哈特们被送到客厅，只有梅赛德斯被叫到伯恩哈特的私人房间。</p>
     <p>“梅赛德斯。那是那样吗？”</p>
@@ -88,10 +88,10 @@
     <p>因为吉克哈特自己已经化装了的身姿，稍微复杂。</p>
     <p>被邀请了的吸血鬼们全体穿华丽的衣服和礼服，优雅地举止。</p>
     <p>不愧是吸血鬼的城堡，场内被仅有的灯光点亮，有点令人毛骨悚然。</p>
-    <p>不过，这种情况在任何地方都是一样的，格鲁内瓦尔特家基本上都是黑暗的。</p>
+    <p>不过，这种情况在任何地方都是一样的，格鲁内瓦特家基本上都是黑暗的。</p>
     <p>梅赛德斯对平时穿不惯的礼服感到有些不舒服，等待着时间化为墙上的花朵。</p>
     <p>虽然外表看上去是位可爱的少女，但被梅赛德斯释放出的剑吞气息所吞没的同龄人却无法接近。</p>
-    <p>与格鲁内瓦尔特变得亲密的事将来性地有利，听父母说来邀请跳舞的11岁的少年被梅赛德斯一瞥，哭逃跑了。</p>
+    <p>与格鲁内瓦特变得亲密的事将来性地有利，听父母说来邀请跳舞的11岁的少年被梅赛德斯一瞥，哭逃跑了。</p>
     <p>另一方面吉克哈特停止了男装成为礼服身姿，虽然年幼但是可爱的那个身姿几个男人使之放松着脸。</p>
     <p>不要说萝莉控什么的。在吸血鬼的世界里，15岁就可以结婚了，在战争中也经常出现。</p>
     <p>与义务教育完善的日本不同。即使过了20岁也没有像在父母身边玩的那样得天独厚，被要求早期成为大人。</p>
@@ -101,7 +101,7 @@
     <p>在有血液的葡萄酒上涂了血的果酱的面包。香肠、煮过的土豆。</p>
     <p>不知道是什么魔鬼，只是烤过的肉，果然血像调味汁一样被浇着。</p>
     <p>而且没有沙拉。“营养平衡？那是什么？连血都喝不就行了嘛”这样的吸血鬼是不会考虑平衡什么的。只吃喜欢的东西。</p>
-    <p>其他还有一般认为是triu商会提供的巧克力和巧克力clanch,不过，这边以可怕的速度减少着。</p>
+    <p>其他还有一般认为是トライヌ商会提供的巧克力和巧克力clanch,不过，这边以可怕的速度减少着。</p>
     <p>“巴尔多第一王子入场！”</p>
     <p>会场里回响着声音，从楼梯上走来一只猪。</p>
     <p>……不，不是猪。胖得像猪的王子走了过来。</p>
