--- a/OEBPS/Text/c038.xhtml
+++ b/OEBPS/Text/c038.xhtml
@@ -20,7 +20,7 @@
     <p>伯恩哈特把手插在口袋里行使魔法，在地板上不断长出钢枪，将王侧的士兵串起来。</p>
     <p>护卫的士兵也并非是无能的。</p>
     <p>既然担任了保护国王自身安全的大任，就具备了相应的实力。</p>
-    <p>特别是在国王身边守候的近卫队长，曾经是A级别求婚者，是拥有折纸经验的人。</p>
+    <p>特别是在国王身边守候的近卫队长，曾经是A级别saker，是拥有折纸经验的人。</p>
     <p>其他的近卫骑士也是只选了精锐的精英集团。</p>
     <p>但是，这却完全没有成为对手。</p>
     <p>牺牲一只手接近梅赛德斯的骑士头被地板打失神，踏过同伴打算接近伯恩哈特的骑士他一步也不动地被枪贯穿了。</p>
