--- a/OEBPS/Text/c046.xhtml
+++ b/OEBPS/Text/c046.xhtml
@@ -10,9 +10,86 @@
 </head>
 
 <body>
-    <h1>46. 丢失</h1>
-    <p><span class="textmissing">[[丢失]]156l</span></p>
-    
+    <h1>46. 濃霧派</h1>
+    <p>　メルセデスへの勧誘は続いた。</p>
+    <p>　『雷鳴』、『螺旋』に続き接触を図ってきたのは『濃霧』派閥だ。</p>
+    <p>　授業の合間の休憩時間に復習をしていると上級生から呼び出しを受けたのだ。</p>
+    <p>　非常に鬱陶しいし、邪魔しないで欲しいのだが無視すると更に鬱陶しくなるだろう。</p>
+    <p>　なので断る為にメルセデスは一度だけ誘いに応じる事にした。</p>
+    <p>　呼び出された場所は、この時間は誰も使っていない空き教室だ。</p>
+    <p>　中に入ると、まず目についたのは大柄な二人の男だ。</p>
+    <p>　二人共に青いコートを羽織り、サングラスで素顔を隠している。</p>
+    <p>　そしてその中央にいるのは、メルセデスとそう変わらない年齢に見える少年であった。</p>
+    <p>　桜色の髪は艶があり、顔立ちも一見すると少女と勘違いしてしまいそうなものだ。</p>
+    <p>　身体つきも華奢で、本当に女のような男だ。</p>
+    <p>　……というか、本当に女の子なのかもしれない。正直見分けが全くつかないのだ。</p>
+    <p>「よく来たね、メルセデス・グリューネヴァルト」</p>
+    <p>　あ、男だ。</p>
+    <p>　少年の声を聞いた事でメルセデスは彼の性別を確信した。</p>
+    <p>　見た目に反して声が低いのだ。</p>
+    <p>　彼の服装はこの学園指定の制服であり、これを着れるのは一部の成績上位者のみである。</p>
+    <p>　つまりこの時点で、彼の学力はある程度保証されていた。</p>
+    <p>　まあ、学力だけが高い馬鹿の可能性もあるわけだが。</p>
+    <p>「僕はハルトマン・ハルトマン。『濃霧』派閥の長にして、西方の大都市ネーベルバンクをいずれ統治する者だ」</p>
+    <p>　名前と家名が同じとは、覚えやすいなとメルセデスは場違いな感想を抱いた。</p>
+    <p>　それにしてもネーベルバンクという名前は何処かで聞き覚えがある気がする。</p>
+    <p>　はて、どこで聞いた名前だったか。</p>
+    <p>「両脇にいるこいつ等は僕の護衛だ。</p>
+    <p>王家に古くから仕える裏の重鎮とも言える一族がいてね。この二人はその当主の血を引く者達さ。</p>
+    <p>更に彼等の母は王家直属の隠密部隊の隊長でもあり、僕の家庭教師でもある。</p>
+    <p>ああ、脅しているわけではないよ。ただ事実を教えているだけさ」</p>
+    <p>　随分とお喋りかつ、自慢したがりな性格らしい。</p>
+    <p>　この時点で既に三下感が漂っているが、メルセデスはあえて指摘せず言葉を聞いていた。</p>
+    <p>　本人の能力はさておき、とりあえずコネという点ではかなり優れているらしい。</p>
+    <p>「単刀直入に言おう。僕らの派閥に加わるがいい。君にはその資格がある」</p>
+    <p>「断る」</p>
+    <p>　誘われたので、とりあえず断っておいた。</p>
+    <p>　下らない派閥ごっこなど彼等だけでやっていればいい。</p>
+    <p>　そんな事よりメルセデスは学業に打ち込み、知識と技術を磨きたいのだ。</p>
+    <p>　メルセデスの敵は彼等ではない。</p>
+    <p>　家を出て行く際にいずれ立ち塞がるだろう父、ベルンハルトだ。</p>
+    <p>　そしてこの世界の真実を探す上で必ず衝突するいくつものダンジョンや、ダンジョン所有者こそがメルセデスの見据える仮想敵である。</p>
+    <p>　派閥だの何だの、そんな小さなものは最初から眼中にないのである。</p>
+    <p>「ふ……どうやら君は勘違いしているようだ。</p>
+    <p>これはお願いではない。ハルトマン家次期当主たる僕が命令しているんだよ」</p>
+    <p>　ハルトマンがそう言うと、護衛の木偶の坊二人が前に出た。</p>
+    <p>　やはりこうなったか、と内心うんざりしながらも無言で拳を握る。</p>
+    <p>　来るというなら仕方ない。骨の十本や二十本は覚悟してもらおう。</p>
+    <p>　しかしまさに両者がぶつかる寸前で、突然何者かがドアを開けて乱入してきた。</p>
+    <p>「はい、そこまで！」</p>
+    <p>　飛び込んできたのはハンナであった。</p>
+    <p>　隣には彼女のペットであるウサちゃんもおり、手には銃剣を構えている。</p>
+    <p>　待て、その銃はどこから持ってきた。</p>
+    <p>「は？　一体誰だい、僕の邪魔を…………」</p>
+    <p>　ハルトマンは鬱陶しそうに乱入者へ目を向けたが、言葉が終わる前に顔を青褪めさせてしまった。</p>
+    <p>　ダラダラと冷や汗をかいており、その顔には『何故？』という疑問がありありと浮かんでいる。</p>
+    <p>　護衛の二人もそれは同様で、ガクガクと震えてすらいた。</p>
+    <p>「……ハ、ハンナ……先生……？」</p>
+    <p>「はーい。貴方の家庭教師のハンナでーす」</p>
+    <p>「…………あの、何故学園に？　り、臨時教師ですか？」</p>
+    <p>「王女様の護衛よ。生徒として潜入してるの」</p>
+    <p>「あの……貴女、生徒って年齢じゃ……」</p>
+    <p>「んー？　聞こえないなあ？」</p>
+    <p>　どうやらハルトマンの言っていた家庭教師とはハンナの事だったらしい。</p>
+    <p>　王家直属の隠密部隊の隊長というのも彼女の事であり、更にハンナの夫が王家直属の裏幹部である事までこれで判明してしまった。</p>
+    <p>　ハンナ自身は商人の子とか言っていたが……恐らく、バーガー家の表の立場が商人なのだろう。</p>
+    <p>「……マ、ママン……」</p>
+    <p>「ど、どうしてママがここに……」</p>
+    <p>　更に驚くべき単語が護衛二人の口から飛び出した。</p>
+    <p>　ママってお前。その図体でママって。</p>
+    <p>　いやそれより、つまりはあれだ。このデカブツ二人はどうもハンナの息子だったらしい。</p>
+    <p>　正直全然似ていないし、子供にしか見えないハンナからどうやってこんなデカいのが産まれたのか全然分からないが、彼等の反応を見る限り嘘はなさそうだ。</p>
+    <p>　……養子とかならばまだ納得は出来なくもない。</p>
+    <p>「さて。話は聞かせてもらいました。</p>
+    <p>貴方達は一体いつから、他人を脅すような悪い子になっちゃったんですか？　私はとても悲しいです」</p>
+    <p>「あ、いや、その、それは、えっと、言葉のあやというか……ほ、本当にやる気なんてなかったというか……なあ？」</p>
+    <p>　ハルトマンが護衛二人に慌てて話を振ると、二人は勢いよく首を縦に振った。</p>
+    <p>　どうやらかなり恐れられているようだ。</p>
+    <p>　しかしハンナは笑顔を浮かべつつも、発する気配は剣呑さを増している。</p>
+    <p>「実行の有無に関係なく、そうして圧力をかけて従わせようとする行為を脅迫と言います。</p>
+    <p>私達貴族は大きな権力を持つからこそ、その力の使い所を考えなくてはなりません。</p>
+    <p>自らの為だけに他者を従わせるのでは暴君と変わりません」</p>
+    <p>　余談だが、自らの為だけに他者を従わせて子供まで孕ませた男がメルセデスの父である。</p>
     <p>“看来你们有必要进行再教育呢。”</p>
     <p>“好棒！？饶了我吧！”</p>
     <p>“你的父亲拜托我说‘在学园里如果做个傻瓜的话，就重新训练吧’。做好觉悟了吧？”</p>
@@ -32,7 +109,7 @@
     <p>头上顶着漫画一样的衣橱的三人求得了梅赛德斯的原谅，并发誓再也不找茬了。</p>
     <p class="divline"></p>
     <p>菲利克斯结成派系是在他三年级的时候。</p>
-    <p>当时年仅十三岁的菲利克斯为了引起父亲的关注，认为必须在狩猎节上夺冠，于是以格鲁内瓦尔特的名义召集同伴组成了球队，并成立了派系。</p>
+    <p>当时年仅十三岁的菲利克斯为了引起父亲的关注，认为必须在狩猎节上夺冠，于是以格鲁内瓦特的名义召集同伴组成了球队，并成立了派系。</p>
     <p>集合弱者。一个人无法夺冠者的集会。不符合狩猎祭本来的宗旨的狭隘手段。</p>
     <p>那种事不用谁说我也知道。</p>
     <p>但是，不那样做是赢不了的。</p>
@@ -66,7 +143,7 @@
     <p>一知道不能吸甜蜜，就一个接一个地离开了菲利克斯。</p>
     <p>剩下的大部分人，是强迫弱了的菲利克斯遵从的事强迫打算蒙上恩的狡猾的人们。</p>
     <p>“即使到了这种情况，我也不能看清自己，所以要优待自己”。</p>
-    <p>但是那些人也只是不知道格鲁内瓦尔特家的实情。</p>
+    <p>但是那些人也只是不知道格鲁内瓦特家的实情。</p>
     <p>如果知道伯恩哈特的关心早已转移到妹妹那边的话，他们一定会舍弃菲利克斯，摩擦到梅赛德斯。</p>
     <p>这也不是卑鄙的行为。</p>
     <p>要维持群体的话，领导必须要强大。</p>
@@ -76,6 +153,6 @@
     <p>围困者一个也没有。</p>
     <p>现在，他孤独得无比凄惨。</p>
     <p>所以吧。想附着在那里的人出现。</p>
-    <p>“菲利克斯·格鲁内瓦尔特小姐是吧？对你有好消息”</p>
+    <p>“菲利克斯·格鲁内瓦特小姐是吧？对你有好消息”</p>
     <p>这样说着，突然和我搭话的是一个身着白色服装的男人——手里握着封石。</p>
 </body>
