--- a/OEBPS/Text/c053.xhtml
+++ b/OEBPS/Text/c053.xhtml
@@ -10,14 +10,84 @@
 </head>
 
 <body>
-    <h1>53. 丢失</h1>
-    <p><span class="textmissing">[[丢失]] 176</span></p>
-    
+    <h1>53. プラクティスダンジョン</h1>　学園も屋敷もドロドロしている貴族社会に若干うんざりしたメルセデスが向かった先は、実に久しぶりとなるシーカーギルドであった。
+
+    <p>　メルセデスがギルドに入ると荒くれ達の野獣のような視線が彼女を射抜く。</p>
+    <p>　互いが互いを商売敵と見做し、自分達以外は信じないと初手にして無言で明かされるこのピリピリとした感じがメルセデスは気に入っていた。</p>
+    <p>　笑顔で近付き、親しい隣人の仮面を張り付けて裏でドロドロとしている貴族社会にはない、荒くれだからこそのサッパリとした敵意がここにはある。</p>
+    <p>　最近はあっちこっちもドロドロしており、いい加減ストレスが溜まってきたメルセデスは気分転換も兼ねて久しぶりにダンジョンへ入ろうと考えたのだ。</p>
+    <p>「あらあ、お久しぶりねえ。ご無沙汰だったじゃない」</p>
+    <p>　受付には以前と変わらず、気前よく出迎えてくれるオネエ系吸血鬼がいた。</p>
+    <p>　スキンヘッドだった頭はモヒカンになっており、顔の縫い跡も以前と少し変わっている。</p>
+    <p>　また少しお洒落を変えたようだが、このセンスは理解出来ない。</p>
+    <p>「ああそうだ、ギルドカードの更新していく？　随分やってないでしょ」</p>
+    <p>「そうだな。やっておこうか」</p>
+    <p>　受付が新しいカードを出し、メルセデスは古いカードを彼に渡す。</p>
+    <p>　ランクの更新ならばカードを取り換える必要はないが、カードに記された能力値を更新する場合は取り替えなければならない。</p>
+    <p>　これは偽装や虚偽を防止する為だ。</p>
+    <p>　昔は血さえ付ければ自分で能力値を更新出来たのだが、するとそれを利用して強者他人の血を付ける事で能力値の偽装を行う輩が現れ始めた。</p>
+    <p>　なので今のギルドカードは書き換え出来ない特殊なインクを用いた上で、新しいカードでなければ血を付けても反応しないようになっている。</p>
+    <p>　この技術はかつてダンジョンより宝を持ち帰ったという伝説のシーカー『イーシャ・テンセ』が齎したものだ。</p>
+    <p>　メルセデスは指を切り、カードに血を垂らす。</p>
+    <p>　するとそこに、今のメルセデスの能力が記載された。</p>
+    <p>【メルセデス・カルヴァート】</p>
+    <p>シーカーランク：C</p>
+    <p>第一属性：土</p>
+    <p>第二属性：風</p>
+    <p>腕力：level　５</p>
+    <p>脚力：level　５</p>
+    <p>耐久：level　５</p>
+    <p>体力：level　５</p>
+    <p>魔力：level　３</p>
+    <p>瞬発：level　５</p>
+    <p>再生：level　６</p>
+    <p>「うわあ、何か上昇してるし……」</p>
+    <p>　記された能力に受付は青い顔をしているが、やはり一桁だと凄いのかどうかいまいち伝わらない。</p>
+    <p>　メルセデスとしてはむしろ思ったよりも伸びていない事に驚いたくらいだ。</p>
+    <p>　彼女は普段から魔石に込めた重力魔法を自らに付与して鍛えている。</p>
+    <p>　二十四時間常に負荷をかけてトレーニングをしているようなものだ。なので普通に考えればもっと伸びていてもおかしくない。</p>
+    <p>　これは恐らく、今の重力に身体が慣れてしまったという事なのだろう、とメルセデスは考えた。</p>
+    <p>　宇宙飛行士の筋力や骨の強度が衰えるのは有名な話だが、これは重力の軽い環境では骨や筋肉に負荷がかからないからである。</p>
+    <p>　生物というのは使わない部分は衰えるように出来ているのだ。</p>
+    <p>　逆に使う部分は強くなるよう設計されており、例えば上記の筋力が衰えた宇宙飛行士が地球で過ごしてリハビリすれば筋力と骨は徐々に元に戻るだろう。</p>
+    <p>　メルセデスは自らに負荷をかける事で、この『地球に戻ってきた宇宙飛行士』と同じ状態になっている。</p>
+    <p>　しかしこれも無限に強くなれるわけではない。ある程度回復して重力に慣れれば、普通に過ごしているだけで強くなる事はないだろう。</p>
+    <p>　これは肉体が『これだけあれば十分』と判断してしまうからだ。</p>
+    <p>　肉体というのは不思議なもので、必要最低限を効率よく求めるようになっている。</p>
+    <p>　暗闇で過ごす生き物は聴覚や嗅覚が鋭くなるが必要のない視覚は進化の過程でオミットされる。</p>
+    <p>　重力の軽い場所に行けば、そこで過ごせるだけの筋力と骨の強度を残して劣化し、逆に重力の強い場所に行けば必要な分の筋力を慌てて得ようとする。</p>
+    <p>　つまりメルセデスの身体は、『今の負荷程度ならばこれ以上強くなる必要はない』と判断を下してしまったのだ。</p>
+    <p>　要するに、そろそろ負荷を増やしてもいい頃という事である。</p>
+    <p>　メルセデスは依頼が張り出されているボードの前へ行き、そこに張られた依頼書を見る。</p>
+    <p>　やはりというか、当たり前だがシュタルクダンジョン関連はもうない。全てプラクティスダンジョン関連の依頼だ。</p>
+    <p>　その中から適当にオーク捕獲依頼を剥がし、受付カウンターへと戻った。</p>
+    <p>「これを受けよう」</p>
+    <p>「オークね。まあ貴方なら問題ないでしょうけど、一応オークに関しての注意事項聞いておく？」</p>
+    <p>「聞こうか」</p>
+    <p>「はいはい。オークは大体１ｍ半から、大きい個体ならば２ｍくらいのサイズの二足歩行の豚よ。</p>
+    <p>厚い脂肪を蓄えていて、炎や冷気などの魔法攻撃に耐性があり、力も強いからエルフェが苦手としているらしいわ。</p>
+    <p>まあ吸血鬼私らにとっちゃ、ただの鈍間な肉だけどね」</p>
+    <p>　オークと言えばファンタジーでは大体魔法に弱い脳筋なイメージがあったが、むしろ魔法には強いらしい。</p>
+    <p>　半面、動きが遅く肉は柔らかいので斬撃には滅法弱いようだ。</p>
+    <p>　つまりメルセデスの敵ではないだろう。</p>
+    <p>「それと、プラクティスダンジョンは少し特殊なダンジョンでね。</p>
+    <p>全十五階層なんだけど、最下層にお宝はない・・・・・わ。完全にそこで行き止まりよ」</p>
+    <p>「……行き止まり？」</p>
+    <p>「そ。最下層にはボスがいて、ちょっと豪華な武器か防具を持っているから、あえて言うならそれがお宝ね」</p>
+    <p>　それはおかしい、とメルセデスは疑問に思った。</p>
+    <p>　宝がなくて行き止まりなど、あり得ない。</p>
+    <p>　それはダンジョン所有者だからこそ確信して言える事だ。</p>
+    <p>　ダンジョンの最奥には扉があり、そこで試練を求められる。</p>
+    <p>　扉がないなど絶対にない。もし本当にないならば、それはダンジョンではなく準ダンジョンだ。</p>
+    <p>（これは一度、この目で確認する必要がありそうだ）</p>
+    <p>　メルセデスはこの依頼のついでに最下層まで一気に潜る事を決意した。</p>
+    <p>　幸い、昔からあるダンジョンだけあって先人によるマッピングは完璧だ。</p>
+    <p>　プラクティスダンジョンのマップを購入し、ダンジョンへと向かった。</p>
     <p class="divline"></p>
     <p>普拉克蒂斯迷宫位于离蓝洞两公里左右的地牢。</p>
     <p>这个迷宫不仅仅是弱小的魔物出现，而且每个都是使用武具的素材、食材、衣服材料的魔物，所以利用价值很高。</p>
     <p>据说在这个迷宫里不能使用的魔物是不会出现的，打倒任何魔物带回去都会赚钱。</p>
-    <p>从它被用于许多寻客和寻求在这个迷宫的利益，也聚集了其他城市的寻客和商人。</p>
+    <p>从它被用于许多saker和寻求在这个迷宫的利益，也聚集了其他城市的saker和商人。</p>
     <p>八十年前的兽人战争结束，伯恩哈特成为领主的时候出现的这个洞窟是布鲁特的经济中心。</p>
     <p>正因为有了这个迷宫，蓝特才发展到这种地步。</p>
     <p>梅赛德斯闯进了一个非常方便的地牢。</p>
@@ -54,5 +124,7 @@
     <p>“好肉……软得几乎没有臭味。从小羊时期就开始吃好东西成长，非常棒的素材”</p>
     <p>摆好姿势呼吁胜利的果冻和，在那个横(侧)一边沉浸喜悦一边解体的sufu。</p>
     <p>面对这混乱的景象，梅赛德斯什么也说不出来。</p>
-    
+    <p class="divline"></p>
+    <p>ベンケイ「久しぶりの出番なのに俺等影薄くね？」</p>
+    <p>クロ「キューン……」</p>
 </body>
