--- a/OEBPS/Text/c054.xhtml
+++ b/OEBPS/Text/c054.xhtml
@@ -23,7 +23,7 @@
     <p>走在前头的果冻原本就是为了陷阱而召唤的魔物，可以说是死亡上等的一次性棋子。可以随意更换。</p>
     <p>但是果冻还没死，精神一边前头前进一边踢散着出来的魔物。</p>
     <p>虽然有时会陷入圈套，但都是对致命伤造成相当轻的伤害。</p>
-    <p>说起来有圈套也是很奇怪的事情。这个迷宫里频繁地装有纸箱，每次被解除或者被破坏，或者发动。</p>
+    <p>说起来有圈套也是很奇怪的事情。这个迷宫里频繁地装有saker，每次被解除或者被破坏，或者发动。</p>
     <p>可是如果考虑为何圈套残留着，只有谁再设置着这样的回答以外到达。</p>
     <p>“齐维尔夫、迷宫除了魔物以外，还会自动设置陷阱吗？”</p>
     <p>“不，主人。像我们这样的迷宫管理者在预先配置的魔物和设备丢失的时候补充那个，积分的话重新量产魔物,不过，不重新设置没有的东西。我们进行补充……只是维持现状”</p>
