--- a/OEBPS/Text/c105.xhtml
+++ b/OEBPS/Text/c105.xhtml
@@ -21,19 +21,19 @@
     <p>进入格伦萨迷宫后，不禁发出了梅赛德斯的第一声。</p>
     <p>因为那里广阔的空间大致，与梅赛德斯想象的迷宫是不同的。</p>
     <p>一言以蔽之……那里是一望无际的天空。</p>
-    <p>作为脚手架的道路在空中建造，但是有些地方断了。</p>
+    <p>作为立足点的道路在空中建造，但是有些地方断了。</p>
     <p>说是要跳跃，一点点的脚步处处浮游，非常不亲切。</p>
     <p>而且道路会一直向上延伸，和以前的迷宫不同，它不是向下而是向上延伸。</p>
     <p>“原来如此，捕获能飞的魔物的委托非常多。”</p>
     <p>如果变成这样的形状，这里能飞行的人压倒性地有利立。</p>
-    <p>即使不能飞，也能通过从脚手架跳到脚手架上移动，如果做那样的事的话，飞到一条直线上去会更快更准确。</p>
+    <p>即使不能飞，也能通过从立足点跳到立足点上移动，如果做那样的事的话，飞到一条直线上去会更快更准确。</p>
     <p>令人在意的是，如果落榜了会怎么样呢……难道就这样死亡吗？</p>
     <p>“啊啊啊啊啊啊啊啊啊啊～～～！”</p>
     <p>一想到这些，同业者铁甲的吸血鬼就从上面发出了无情的悲鸣，摔了下来。</p>
     <p>就这样，他通过梅赛德斯的面前，目光交汇的瞬间，梅赛德斯仿佛在寻求帮助，但梅赛德斯却无视了它。</p>
     <p>如果拿出皮可也许来得及，但是这个时机根本没有时间去帮忙。</p>
     <p>我对落榜后会变成什么样也很感兴趣。</p>
-    <p>就这样，纸箱的悲鸣渐渐远去，听不见了。</p>
+    <p>就这样，saker的悲鸣渐渐远去，听不见了。</p>
     <p>看来下面相当深。</p>
     <p>再等一会儿，刚才应该掉下去的男人突然出现在梅赛德斯旁边。</p>
     <p>原来如此，掉下来的话从起点重新开始吧。实在易懂。</p>
@@ -103,7 +103,7 @@
     <p>梅赛德斯认为，迷宫不是那么简单就能通关的，大多会遭到守护者的报复，所以没有必要惊慌失措。</p>
     <p>或者，原本不能通关的人也有调查这里的可能性。</p>
     <p>“嗯？”</p>
-    <p>在附近转了一会儿，发现了不自然浮现的小脚手架。</p>
+    <p>在附近转了一会儿，发现了不自然浮现的小立足点。</p>
     <p>着地一看，就知道地面上有坑。</p>
     <p>那个凹陷是盾的形状，但是没有重要的盾。</p>
     <p>不知从哪里，拿来适合这个形状的盾，镶上去才好呢……或者，原来在这里的是谁带走的？</p>
